--- a/GameData/NearFutureConstruction/Parts/Truss/truss-hex/truss-hex-02.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-hex/truss-hex-02.cfg
@@ -2,169 +2,175 @@
 // 1.25m Truss - Med
 PART
 {
-	name = truss-hex-02
-	module = Part
-	author = Chris Adderley (Nertea)
+  name = truss-hex-02
+  module = Part
+  author = Chris Adderley (Nertea)
 
-	MODEL
-	{
-		model = NearFutureConstruction/Parts/Truss/truss-hex/truss-hex-02
-		position = 0.0, 0.0, 0.0
-		scale = 1,1,1
-		rotation = 0, 0, 0
-	}
-	rescaleFactor = 1
+  MODEL
+  {
+    model = NearFutureConstruction/Parts/Truss/truss-hex/truss-hex-02
+    position = 0.0, 0.0, 0.0
+    scale = 1,1,1
+    rotation = 0, 0, 0
+  }
+  rescaleFactor = 1
 
-	node_stack_top01 = 0.0,0.9628141, 0.0, 0.0, 1.0, 0.0, 1
-	node_stack_top02 = 0.0, 0.8336979, 0.0, 0.0, -1.0, 0.0, 1
-	node_stack_bottom02 = 0.0,-0.8305129, 0.0, 0.0, 1.0, 0.0, 1
-	node_stack_bottom01 = 0.0, -0.959732, 0.0, 0.0, -1.0, 0.0, 1
-	node_attach = -0.8413761,0.0, 0.0, -1.0, 0.0, 0.0, 1
+  node_stack_top01 = 0.0,0.9628141, 0.0, 0.0, 1.0, 0.0, 1
+  node_stack_top02 = 0.0, 0.8336979, 0.0, 0.0, -1.0, 0.0, 1
+  node_stack_bottom02 = 0.0,-0.8305129, 0.0, 0.0, 1.0, 0.0, 1
+  node_stack_bottom01 = 0.0, -0.959732, 0.0, 0.0, -1.0, 0.0, 1
+  node_attach = -0.8413761,0.0, 0.0, -1.0, 0.0, 0.0, 1
 
 
-	TechRequired = advMetalworks
-	entryCost = 1700
-	cost = 300
-	category = Structural
-	subcategory = 0
-	title = #LOC_NFConstruction_truss-hex-02_title
-	manufacturer = #LOC_NFConstruction_manufacturer_gigabloks_title
-	description = #LOC_NFConstruction_truss-hex-02_description
-	attachRules = 1,1,1,1,0
+  TechRequired = advMetalworks
+  entryCost = 1700
+  cost = 300
+  category = Structural
+  subcategory = 0
+  title = #LOC_NFConstruction_truss-hex-02_title
+  manufacturer = #LOC_NFConstruction_manufacturer_gigabloks_title
+  description = #LOC_NFConstruction_truss-hex-02_description
+  attachRules = 1,1,1,1,0
 
-	bulkheadProfiles = hextruss, srf
+  bulkheadProfiles = hextruss, srf
 
-	// --- standard part parameters ---
-	mass = 0.1
-	dragModelType = default
-	maximum_drag = 0.2
-	minimum_drag = 0.2
-	angularDrag = 1
-	crashTolerance = 80
-	breakingForce = 200
-	breakingTorque = 200
-	maxTemp = 2000
-	thermalMassModifier = 0.4 // I am hollow
+  // --- standard part parameters ---
+  mass = 0.1
+  dragModelType = default
+  maximum_drag = 0.2
+  minimum_drag = 0.2
+  angularDrag = 1
+  crashTolerance = 80
+  breakingForce = 200
+  breakingTorque = 200
+  maxTemp = 2000
+  thermalMassModifier = 0.4 // I am hollow
 
-	tags = #LOC_NFConstruction_truss-hex-02_tags
+  tags = #LOC_NFConstruction_truss-hex-02_tags
 
-	MODULE
-	{
-		name = ModuleB9DisableTransform
-		transform = HexArTankMed
-		transform = HexLH2TankMed
-		transform = HexLH2OTankMed
-		transform = HexLiTankMed
-		transform = HexLH2OTankMedFoil
-	}
+  MODULE
+  {
+    name = ModuleB9DisableTransform
+    transform = HexArTankMed
+    transform = HexLH2TankMed
+    transform = HexLH2OTankMed
+    transform = HexLiTankMed
+    transform = HexLH2OTankMedFoil
+  }
 
-	MODULE
-	{
-		name = ModuleB9PartSwitch
-		moduleID = meshSwitch
-		switcherDescription = #LOC_NFConstruction_switcher_subtype_title
-		baseVolume = 400
-		SUBTYPE
-		{
-			name = Solid
-			title = #LOC_NFConstruction_switcher_subtype_variant1
-			transform = MediumTruss
-			transform = COLLIDERMED
-		}
+  MODULE
+  {
+    name = ModuleB9PartSwitch
+    moduleID = meshSwitch
+    switcherDescription = #LOC_NFConstruction_switcher_subtype_title
+    baseVolume = 400
+    SUBTYPE
+    {
+      name = Solid
+      title = #LOC_NFConstruction_switcher_subtype_variant1
+      transform = MediumTruss
+      transform = COLLIDERMED
+      primaryColor = #ffffff
+      secondaryColor = #000000
+    }
 
-		SUBTYPE
-		{
-			name = Hollow
-			title = #LOC_NFConstruction_switcher_subtype_variant2
-			transform = MediumTrussHollow
-			transform = COLLIDEREND002
-			transform = COLLIDEREND003
-			transform = COLLIDERSIDE004
-			transform = COLLIDERSIDE005
-			transform = COLLIDERSIDE006
-			node = top02
-			node = bottom02
-			crashTolerance = 60
-			addedMass = -0.02
-			addedCost = -75
-		}
-		SUBTYPE
-		{
-			name = LFO
-			title= #LOC_NFConstruction_switcher_subtype_variant_fuel_LFO
-			tankType = LFOX
-			transform = HexLFOTankMed
-			transform = MediumTruss
-			transform = COLLIDERMED
-			addedCost = 2696
-			crashTolerance = 50
+    SUBTYPE
+    {
+      name = Hollow
+      title = #LOC_NFConstruction_switcher_subtype_variant2
+      transform = MediumTrussHollow
+      transform = COLLIDEREND002
+      transform = COLLIDEREND003
+      transform = COLLIDERSIDE004
+      transform = COLLIDERSIDE005
+      transform = COLLIDERSIDE006
+      node = top02
+      node = bottom02
+      crashTolerance = 60
+      addedMass = -0.02
+      addedCost = -75
+      primaryColor = #000000
+      secondaryColor = #000000
+    }
+    SUBTYPE
+    {
+      name = LFO
+      title= #LOC_NFConstruction_switcher_subtype_variant_fuel_LFO
+      tankType = LFOX
+      transform = HexLFOTankMed
+      transform = MediumTruss
+      transform = COLLIDERMED
+      addedCost = 2696
+      crashTolerance = 50
       descriptionSummary = #LOC_NFConstruction_switcher_subtype_variant_LFO_summary
       descriptionDetail = #LOC_NFConstruction_switcher_subtype_variant_LFO_detail
-		}
-		SUBTYPE
-		{
-			name = LF
-			title= #LOC_NFConstruction_switcher_subtype_variant_fuel_LF
-			tankType = LF
-			transform = HexLFTankMed
-			transform = MediumTruss
-			transform = COLLIDERMED
-			addedCost = 2696
-			crashTolerance = 50
+    }
+    SUBTYPE
+    {
+      name = LF
+      title= #LOC_NFConstruction_switcher_subtype_variant_fuel_LF
+      tankType = LF
+      transform = HexLFTankMed
+      transform = MediumTruss
+      transform = COLLIDERMED
+      addedCost = 2696
+      crashTolerance = 50
       descriptionSummary = #LOC_NFConstruction_switcher_subtype_variant_LF_summary
       descriptionDetail = #LOC_NFConstruction_switcher_subtype_variant_LF_detail
 
-		}
-		SUBTYPE
-		{
-			name = Ox
-			title= #LOC_NFConstruction_switcher_subtype_variant_fuel_O
-			tankType = OX
-			transform = HexOXTankMed
-			transform = MediumTruss
-			transform = COLLIDERMED
-			crashTolerance = 50
+    }
+    SUBTYPE
+    {
+      name = Ox
+      title= #LOC_NFConstruction_switcher_subtype_variant_fuel_O
+      tankType = OX
+      transform = HexOXTankMed
+      transform = MediumTruss
+      transform = COLLIDERMED
+      crashTolerance = 50
       descriptionSummary = #LOC_NFConstruction_switcher_subtype_variant_O_summary
       descriptionDetail = #LOC_NFConstruction_switcher_subtype_variant_O_detail
-		}
-		SUBTYPE
-		{
-			name = Support
-			title= #LOC_NFConstruction_switcher_subtype_variant_fuel_Service
-			tankType = MPEC
-			transform = HexMPTankMed
-			transform = MediumTruss
-			transform = COLLIDERMED
-			crashTolerance = 50
+    }
+    SUBTYPE
+    {
+      name = Support
+      title= #LOC_NFConstruction_switcher_subtype_variant_fuel_Service
+      tankType = MPEC
+      transform = HexMPTankMed
+      transform = MediumTruss
+      transform = COLLIDERMED
+      crashTolerance = 50
       descriptionSummary = #LOC_NFConstruction_switcher_subtype_variant_Service_summary
       descriptionDetail = #LOC_NFConstruction_switcher_subtype_variant_Service_detail
-		}
-		SUBTYPE
-		{
-			name = Xenon
-			title= #LOC_NFConstruction_switcher_subtype_variant_fuel_Xe
-			tankType = Xenon
-			transform = HexXeTankMed
-			transform = MediumTruss
-			transform = COLLIDERMED
-			crashTolerance = 50
+      primaryColor = #ffffff
+      secondaryColor = #D9B358
+    }
+    SUBTYPE
+    {
+      name = Xenon
+      title= #LOC_NFConstruction_switcher_subtype_variant_fuel_Xe
+      tankType = Xenon
+      transform = HexXeTankMed
+      transform = MediumTruss
+      transform = COLLIDERMED
+      crashTolerance = 50
       descriptionSummary = #LOC_NFConstruction_switcher_subtype_variant_Xe_summary
       descriptionDetail = #LOC_NFConstruction_switcher_subtype_variant_Xe_detail
-		}
-		SUBTYPE
-		{
-			name = Ore
-			title= #LOC_NFConstruction_switcher_subtype_variant_fuel_Ore
-			tankType = Ore
-			transform =  HexOreTankMed
-			transform = MediumTruss
-			transform = COLLIDERMED
-			crashTolerance = 50
+    }
+    SUBTYPE
+    {
+      name = Ore
+      title= #LOC_NFConstruction_switcher_subtype_variant_fuel_Ore
+      tankType = Ore
+      transform =  HexOreTankMed
+      transform = MediumTruss
+      transform = COLLIDERMED
+      crashTolerance = 50
       descriptionSummary = #LOC_NFConstruction_switcher_subtype_variant_Ore_summary
       descriptionDetail = #LOC_NFConstruction_switcher_subtype_variant_Ore_detail
-		}
+    }
 
-	}
+  }
   MODULE
   {
     name = ModuleCargoPart
