--- a/GameData/NearFutureConstruction/Parts/Truss/truss-micro/truss-micro-2.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-micro/truss-micro-2.cfg
@@ -2,89 +2,95 @@
 // 0.625m Truss - Medium
 PART
 {
-	name = truss-micro-02
-	module = Part
-	author = Chris Adderley (Nertea)
+  name = truss-micro-02
+  module = Part
+  author = Chris Adderley (Nertea)
 
-	MODEL
-	{
-		model = NearFutureConstruction/Parts/Truss/truss-micro/truss-micro-2
-		position = 0.0, 0.0, 0.0
-		scale = 1,1,1
-		rotation = 0, 0, 0
-	}
-	rescaleFactor = 1
+  MODEL
+  {
+    model = NearFutureConstruction/Parts/Truss/truss-micro/truss-micro-2
+    position = 0.0, 0.0, 0.0
+    scale = 1,1,1
+    rotation = 0, 0, 0
+  }
+  rescaleFactor = 1
 
-	node_stack_top01 = 0.0, 0.2648, 0.0, 0.0, 1.0, 0.0, 0
-	node_stack_bottom01 = 0.0,-0.2648, 0.0, 0.0, -1.0, 0.0, 0
-	node_attach = 0, -0.2648, 0.0, 0.0, -1.0, 0.0, 0
+  node_stack_top01 = 0.0, 0.2648, 0.0, 0.0, 1.0, 0.0, 0
+  node_stack_bottom01 = 0.0,-0.2648, 0.0, 0.0, -1.0, 0.0, 0
+  node_attach = 0, -0.2648, 0.0, 0.0, -1.0, 0.0, 0
 
 
-	TechRequired = precisionEngineering
-	entryCost = 7800
-	cost = 32
-	category = Structural
-	subcategory = 0
-	title = #LOC_NFConstruction_truss-micro-02_title
-	manufacturer = #autoLOC_501647 //#autoLOC_501647 = StrutCo
-	description = #LOC_NFConstruction_truss-micro-02_description
-	attachRules = 1,1,1,1,0
+  TechRequired = precisionEngineering
+  entryCost = 7800
+  cost = 32
+  category = Structural
+  subcategory = 0
+  title = #LOC_NFConstruction_truss-micro-02_title
+  manufacturer = #autoLOC_501647 //#autoLOC_501647 = StrutCo
+  description = #LOC_NFConstruction_truss-micro-02_description
+  attachRules = 1,1,1,1,0
 
-	bulkheadProfiles = size0, srf
+  bulkheadProfiles = size0, srf
 
-	// --- standard part parameters ---
-	mass = 0.002
-	dragModelType = default
-	maximum_drag = 0.2
-	minimum_drag = 0.2
-	angularDrag = 1
-	crashTolerance = 12
-	breakingForce = 200
-	breakingTorque = 200
-	maxTemp = 2000
-	thermalMassModifier = 0.4 // I am hollow
+  // --- standard part parameters ---
+  mass = 0.002
+  dragModelType = default
+  maximum_drag = 0.2
+  minimum_drag = 0.2
+  angularDrag = 1
+  crashTolerance = 12
+  breakingForce = 200
+  breakingTorque = 200
+  maxTemp = 2000
+  thermalMassModifier = 0.4 // I am hollow
 
-	tags = #LOC_NFConstruction_truss-micro-02_tags
+  tags = #LOC_NFConstruction_truss-micro-02_tags
 
-	MODULE
-	{
-		name = ModuleB9PartSwitch
-		moduleID = meshSwitch
-		switcherDescription = #LOC_NFConstruction_switcher_profile_title
+  MODULE
+  {
+    name = ModuleB9PartSwitch
+    moduleID = meshSwitch
+    switcherDescription = #LOC_NFConstruction_switcher_profile_title
 
-		SUBTYPE
-		{
-			name = Cubic
-			title = #LOC_NFConstruction_switcher_profile_square
-			transform = TrussSquareMed
+    SUBTYPE
+    {
+      name = Cubic
+      title = #LOC_NFConstruction_switcher_profile_square
+      transform = TrussSquareMed
       descriptionSummary = #LOC_NFConstruction_switcher_profile_square_summary
       descriptionDetail = #LOC_NFConstruction_switcher_profile_square_detail
-		}
+      primaryColor = #ffffff
+      secondaryColor = #ffffff
+    }
 
-		SUBTYPE
-		{
-			name = Triangular
-			title = #LOC_NFConstruction_switcher_profile_triangular
-			transform = TrussTriMed
-			addedMass = -0.0005
-			addedCost = -16
+    SUBTYPE
+    {
+      name = Triangular
+      title = #LOC_NFConstruction_switcher_profile_triangular
+      transform = TrussTriMed
+      addedMass = -0.0005
+      addedCost = -16
       descriptionSummary = #LOC_NFConstruction_switcher_profile_triangular_summary
       descriptionDetail = #LOC_NFConstruction_switcher_profile_triangular_detail
-		}
-		SUBTYPE
-		{
-			name = Planar
-			title = #LOC_NFConstruction_switcher_profile_planar
-			transform = TrussPlaneMed
-			addedMass = -0.001
-			addedCost = -24
+      primaryColor = #969696
+      secondaryColor = #969696
+    }
+    SUBTYPE
+    {
+      name = Planar
+      title = #LOC_NFConstruction_switcher_profile_planar
+      transform = TrussPlaneMed
+      addedMass = -0.001
+      addedCost = -24
       descriptionSummary = #LOC_NFConstruction_switcher_profile_planar_summary
       descriptionDetail = #LOC_NFConstruction_switcher_profile_planar_detail
+      primaryColor = #333333
+      secondaryColor = #333333
 
-		}
+    }
 
 
-	}
+  }
   MODULE
   {
     name = ModuleCargoPart
