--- a/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-01.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-01.cfg
@@ -2,211 +2,221 @@
 // 2.5m Truss - Structural
 PART
 {
-	name = truss-octo-01
-	module = Part
-	author = Chris Adderley (Nertea)
+  name = truss-octo-01
+  module = Part
+  author = Chris Adderley (Nertea)
 
-	MODEL
-	{
-		model = NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-01
-		position = 0.0, 0.0, 0.0
-		scale = 1,1,1
-		rotation = 0, 0, 0
-	}
-	rescaleFactor = 1
+  MODEL
+  {
+    model = NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-01
+    position = 0.0, 0.0, 0.0
+    scale = 1,1,1
+    rotation = 0, 0, 0
+  }
+  rescaleFactor = 1
 
-	node_stack_top01 = 0.0, 3.7497899, 0.0, 0.0, 1.0, 0.0, 2
-	node_stack_top02 = 0.0, 3.477283, 0.0, 0.0, -1.0, 0.0, 2
-	node_stack_bottom01 = 0.0, -3.749789, 0.0, 0.0, -1.0, 0.0, 2
-	node_stack_bottom02 = 0.0, -3.477283, 0.0, 0.0, 1.0, 0.0, 2
-	node_attach = 1.187252,0.0, 0.0, 1.0, 0.0, 0.0, 2
+  node_stack_top01 = 0.0, 3.7497899, 0.0, 0.0, 1.0, 0.0, 2
+  node_stack_top02 = 0.0, 3.477283, 0.0, 0.0, -1.0, 0.0, 2
+  node_stack_bottom01 = 0.0, -3.749789, 0.0, 0.0, -1.0, 0.0, 2
+  node_stack_bottom02 = 0.0, -3.477283, 0.0, 0.0, 1.0, 0.0, 2
+  node_attach = 1.187252,0.0, 0.0, 1.0, 0.0, 0.0, 2
 
 
-	TechRequired = advMetalworks
-	entryCost = 2900
-	cost = 800
-	category = Structural
-	subcategory = 0
-	title = #LOC_NFConstruction_truss-octo-1_title
-	manufacturer = #LOC_NFConstruction_manufacturer_gigabloks_title
-	description = #LOC_NFConstruction_truss-octo-1_description
-	attachRules = 1,1,1,1,0
+  TechRequired = advMetalworks
+  entryCost = 2900
+  cost = 800
+  category = Structural
+  subcategory = 0
+  title = #LOC_NFConstruction_truss-octo-1_title
+  manufacturer = #LOC_NFConstruction_manufacturer_gigabloks_title
+  description = #LOC_NFConstruction_truss-octo-1_description
+  attachRules = 1,1,1,1,0
 
-	bulkheadProfiles = octotruss, srf
+  bulkheadProfiles = octotruss, srf
 
-	// --- standard part parameters ---
-	mass = 0.45
-	dragModelType = default
-	maximum_drag = 0.2
-	minimum_drag = 0.2
-	angularDrag = 1
-	crashTolerance = 80
-	breakingForce = 200
-	breakingTorque = 200
-	maxTemp = 2000
-	thermalMassModifier = 0.4 // I am hollow
+  // --- standard part parameters ---
+  mass = 0.45
+  dragModelType = default
+  maximum_drag = 0.2
+  minimum_drag = 0.2
+  angularDrag = 1
+  crashTolerance = 80
+  breakingForce = 200
+  breakingTorque = 200
+  maxTemp = 2000
+  thermalMassModifier = 0.4 // I am hollow
 
-	tags = #LOC_NFConstruction_truss-octo-1_tags
+  tags = #LOC_NFConstruction_truss-octo-1_tags
 
-	MODULE
-	{
-		name = ModuleB9DisableTransform
-		transform = LH2TankLarge
-		transform = LH2OXTankLarge
-		transform = LH2OXTankLargeFoil
-		transform = LithiumTankLarge
-		transform = ArgonTankLarge
-	}
+  MODULE
+  {
+    name = ModuleB9DisableTransform
+    transform = LH2TankLarge
+    transform = LH2OXTankLarge
+    transform = LH2OXTankLargeFoil
+    transform = LithiumTankLarge
+    transform = ArgonTankLarge
+  }
 
-	MODULE
-	{
-		name = ModuleB9PartSwitch
-		moduleID = meshSwitch
-		switcherDescription = #LOC_NFConstruction_switcher_subtype_title
-		baseVolume = 6000
-		SUBTYPE
-		{
-			name = Solid
-			title= #LOC_NFConstruction_switcher_subtype_variant1
-			transform = OctoLarge
-			transform = COLLISION15
+  MODULE
+  {
+    name = ModuleB9PartSwitch
+    moduleID = meshSwitch
+    switcherDescription = #LOC_NFConstruction_switcher_subtype_title
+    baseVolume = 6000
+    SUBTYPE
+    {
+      name = Solid
+      title= #LOC_NFConstruction_switcher_subtype_variant1
+      transform = OctoLarge
+      transform = COLLISION15
       descriptionSummary = #LOC_NFConstruction_switcher_truss_solid_summary
       descriptionDetail = #LOC_NFConstruction_switcher_truss_solid_detail
-		}
+      primaryColor = #ffffff
+      secondaryColor = #ffffff
+    }
 
-		SUBTYPE
-		{
-			name = Hollow
-			title= #LOC_NFConstruction_switcher_subtype_variant2
-			transform = OctoLargeHollow
-			transform = OctoLargeHollowStruct
-			transform = COLLISION09
-			transform = COLLISION10
-			transform = COLLISION11
-			transform = COLLISION12
-			transform = COLLISION16
-			transform = COLLISION17
-			node = top02
-			node = bottom02
-			crashTolerance = 60
-			addedMass = -0.05
-			addedCost = -80
+    SUBTYPE
+    {
+      name = Hollow
+      title= #LOC_NFConstruction_switcher_subtype_variant2
+      transform = OctoLargeHollow
+      transform = OctoLargeHollowStruct
+      transform = COLLISION09
+      transform = COLLISION10
+      transform = COLLISION11
+      transform = COLLISION12
+      transform = COLLISION16
+      transform = COLLISION17
+      node = top02
+      node = bottom02
+      crashTolerance = 60
+      addedMass = -0.05
+      addedCost = -80
       descriptionSummary = #LOC_NFConstruction_switcher_truss_hollow_summary
       descriptionDetail = #LOC_NFConstruction_switcher_truss_hollow_detail
+      primaryColor = #000000
+      secondaryColor = #000000
 
-		}
-		SUBTYPE
-		{
-			name = Saddle
-			title= #LOC_NFConstruction_switcher_subtype_variant3
-			transform = OctoLargeHollowSaddle
-			transform = OctoLargeHollowStructSaddle
-			transform = COLLISION09
-			transform = COLLISION10
-			transform = COLLISION12
-			transform = COLLISION16
-			transform = COLLISION17
-			node = top02
-			node = bottom02
-			crashTolerance = 50
-			addedMass = -0.07
-			addedCost = -120
+    }
+    SUBTYPE
+    {
+      name = Saddle
+      title= #LOC_NFConstruction_switcher_subtype_variant3
+      transform = OctoLargeHollowSaddle
+      transform = OctoLargeHollowStructSaddle
+      transform = COLLISION09
+      transform = COLLISION10
+      transform = COLLISION12
+      transform = COLLISION16
+      transform = COLLISION17
+      node = top02
+      node = bottom02
+      crashTolerance = 50
+      addedMass = -0.07
+      addedCost = -120
       descriptionSummary = #LOC_NFConstruction_switcher_truss_saddle_summary
       descriptionDetail = #LOC_NFConstruction_switcher_truss_saddle_detail
-		}
-		SUBTYPE
-		{
-			name = Dual
-			title=  #LOC_NFConstruction_switcher_subtype_variant4
-			transform = OctoLargeHollowHalf
-			transform = OctoLargeHollowStructHalf
-			transform = COLLISION09
-			transform = COLLISION12
-			transform = COLLISION16
-			transform = COLLISION17
-			node = top02
-			node = bottom02
-			crashTolerance = 40
-			addedMass = -0.09
-			addedCost = -160
+      primaryColor = #ffffff
+      secondaryColor = #000000
+    }
+    SUBTYPE
+    {
+      name = Dual
+      title=  #LOC_NFConstruction_switcher_subtype_variant4
+      transform = OctoLargeHollowHalf
+      transform = OctoLargeHollowStructHalf
+      transform = COLLISION09
+      transform = COLLISION12
+      transform = COLLISION16
+      transform = COLLISION17
+      node = top02
+      node = bottom02
+      crashTolerance = 40
+      addedMass = -0.09
+      addedCost = -160
       descriptionSummary = #LOC_NFConstruction_switcher_truss_dual_summary
       descriptionDetail = #LOC_NFConstruction_switcher_truss_dual_detail
-		}
-		SUBTYPE
-		{
-			name = LFO
-			title= #LOC_NFConstruction_switcher_subtype_variant_fuel_LFO
-			tankType = LFOX
-			transform = OctoLargeBare
-			transform = COLLISION15
-			transform = LFOTankLarge
-			addedCost = 2696
-			crashTolerance = 50
+      primaryColor = #808080
+      secondaryColor = #000000
+    }
+    SUBTYPE
+    {
+      name = LFO
+      title= #LOC_NFConstruction_switcher_subtype_variant_fuel_LFO
+      tankType = LFOX
+      transform = OctoLargeBare
+      transform = COLLISION15
+      transform = LFOTankLarge
+      addedCost = 2696
+      crashTolerance = 50
       descriptionSummary = #LOC_NFConstruction_switcher_subtype_variant_LFO_summary
       descriptionDetail = #LOC_NFConstruction_switcher_subtype_variant_LFO_detail
-		}
-		SUBTYPE
-		{
-			name = LF
-			title= #LOC_NFConstruction_switcher_subtype_variant_fuel_LF
-			tankType = LF
-			transform = OctoLargeBare
-			transform = COLLISION15
-			transform = LFTankLarge
-			addedCost = 2696
-			crashTolerance = 50
+    }
+    SUBTYPE
+    {
+      name = LF
+      title= #LOC_NFConstruction_switcher_subtype_variant_fuel_LF
+      tankType = LF
+      transform = OctoLargeBare
+      transform = COLLISION15
+      transform = LFTankLarge
+      addedCost = 2696
+      crashTolerance = 50
       descriptionSummary = #LOC_NFConstruction_switcher_subtype_variant_LF_summary
       descriptionDetail = #LOC_NFConstruction_switcher_subtype_variant_LF_detail
 
-		}
-		SUBTYPE
-		{
-			name = Ox
-			title= #LOC_NFConstruction_switcher_subtype_variant_fuel_O
-			tankType = OX
-			transform = OctoLargeBare
-			transform = COLLISION15
-			transform = OXTankLarge
-			addedCost = 2696
-			crashTolerance = 50
+    }
+    SUBTYPE
+    {
+      name = Ox
+      title= #LOC_NFConstruction_switcher_subtype_variant_fuel_O
+      tankType = OX
+      transform = OctoLargeBare
+      transform = COLLISION15
+      transform = OXTankLarge
+      addedCost = 2696
+      crashTolerance = 50
       descriptionSummary = #LOC_NFConstruction_switcher_subtype_variant_O_summary
       descriptionDetail = #LOC_NFConstruction_switcher_subtype_variant_O_detail
-		}
-		SUBTYPE
-		{
-			name = Support
-			title= #LOC_NFConstruction_switcher_subtype_variant_fuel_Service
-			tankType = MPEC
-			transform = OctoLargeBare
-			transform = COLLISION15
-			transform = MPTankLarge
-			crashTolerance = 50
+    }
+    SUBTYPE
+    {
+      name = Support
+      title= #LOC_NFConstruction_switcher_subtype_variant_fuel_Service
+      tankType = MPEC
+      transform = OctoLargeBare
+      transform = COLLISION15
+      transform = MPTankLarge
+      crashTolerance = 50
       descriptionSummary = #LOC_NFConstruction_switcher_subtype_variant_Service_summary
       descriptionDetail = #LOC_NFConstruction_switcher_subtype_variant_Service_detail
-		}
-		SUBTYPE
-		{
-			name = Xenon
-			title= #LOC_NFConstruction_switcher_subtype_variant_fuel_Xe
-			tankType = Xenon
-			transform = OctoLargeBare
-			transform = COLLISION15
-			transform = XeTankLarge
-			crashTolerance = 50
+      primaryColor = #ffffff
+      secondaryColor = #D9B358
+    }
+    SUBTYPE
+    {
+      name = Xenon
+      title= #LOC_NFConstruction_switcher_subtype_variant_fuel_Xe
+      tankType = Xenon
+      transform = OctoLargeBare
+      transform = COLLISION15
+      transform = XeTankLarge
+      crashTolerance = 50
       descriptionSummary = #LOC_NFConstruction_switcher_subtype_variant_Xe_summary
       descriptionDetail = #LOC_NFConstruction_switcher_subtype_variant_Xe_detail
-		}
-		SUBTYPE
-		{
-			name = Ore
-			title= #LOC_NFConstruction_switcher_subtype_variant_fuel_Ore
-			tankType = Ore
-			transform = OctoLargeBare
-			transform = COLLISION15
-			transform = OreTankLarge
-			crashTolerance = 50
+    }
+    SUBTYPE
+    {
+      name = Ore
+      title= #LOC_NFConstruction_switcher_subtype_variant_fuel_Ore
+      tankType = Ore
+      transform = OctoLargeBare
+      transform = COLLISION15
+      transform = OreTankLarge
+      crashTolerance = 50
       descriptionSummary = #LOC_NFConstruction_switcher_subtype_variant_Ore_summary
       descriptionDetail = #LOC_NFConstruction_switcher_subtype_variant_Ore_detail
-		}
-	}
+    }
+  }
 }
