--- a/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-03.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-03.cfg
@@ -2,125 +2,133 @@
 // 2.5m Truss - Structural - Quarter
 PART
 {
-	name = truss-octo-03
-	module = Part
-	author = Chris Adderley (Nertea)
+  name = truss-octo-03
+  module = Part
+  author = Chris Adderley (Nertea)
 
-	MODEL
-	{
-		model = NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-03
-		position = 0.0, 0.0, 0.0
-		scale = 1,1,1
-		rotation = 0, 0, 0
-	}
-	rescaleFactor = 1
+  MODEL
+  {
+    model = NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-03
+    position = 0.0, 0.0, 0.0
+    scale = 1,1,1
+    rotation = 0, 0, 0
+  }
+  rescaleFactor = 1
 
-	node_stack_top01= 0.0, 0.9377186, 0.0, 0.0, 1.0, 0.0, 2
-	node_stack_top02= 0.0, 0.6603499, 0.0, 0.0, -1.0, 0.0, 2
-	node_stack_bottom01 = 0.0, -0.9295291, 0.0, 0.0, -1.0, 0.0, 2
-	node_stack_bottom02 = 0.0, -0.6603499, 0.0, 0.0, 1.0, 0.0, 2
-	node_attach = 1.187252, 0.0, 0.0, 1.0, 0.0, 0.0, 2
+  node_stack_top01= 0.0, 0.9377186, 0.0, 0.0, 1.0, 0.0, 2
+  node_stack_top02= 0.0, 0.6603499, 0.0, 0.0, -1.0, 0.0, 2
+  node_stack_bottom01 = 0.0, -0.9295291, 0.0, 0.0, -1.0, 0.0, 2
+  node_stack_bottom02 = 0.0, -0.6603499, 0.0, 0.0, 1.0, 0.0, 2
+  node_attach = 1.187252, 0.0, 0.0, 1.0, 0.0, 0.0, 2
 
-	bulkheadProfiles = octotruss, srf
+  bulkheadProfiles = octotruss, srf
 
-	TechRequired = nanolathing
-	entryCost = 1800
-	cost = 200
-	category = Structural
-	subcategory = 0
-	title = #LOC_NFConstruction_truss-octo-3_title
-	manufacturer = #LOC_NFConstruction_manufacturer_gigabloks_title
-	description = #LOC_NFConstruction_truss-octo-3_description
-	attachRules = 1,1,1,1,0
+  TechRequired = nanolathing
+  entryCost = 1800
+  cost = 200
+  category = Structural
+  subcategory = 0
+  title = #LOC_NFConstruction_truss-octo-3_title
+  manufacturer = #LOC_NFConstruction_manufacturer_gigabloks_title
+  description = #LOC_NFConstruction_truss-octo-3_description
+  attachRules = 1,1,1,1,0
 
-	// --- standard part parameters ---
-	mass = 0.1125
-	dragModelType = default
-	maximum_drag = 0.2
-	minimum_drag = 0.2
-	angularDrag = 1
-	crashTolerance = 80
-	breakingForce = 200
-	breakingTorque = 200
-	maxTemp = 2000
-	thermalMassModifier = 0.4 // I am hollow
+  // --- standard part parameters ---
+  mass = 0.1125
+  dragModelType = default
+  maximum_drag = 0.2
+  minimum_drag = 0.2
+  angularDrag = 1
+  crashTolerance = 80
+  breakingForce = 200
+  breakingTorque = 200
+  maxTemp = 2000
+  thermalMassModifier = 0.4 // I am hollow
 
-	tags = #LOC_NFConstruction_truss-octo-3_tags
+  tags = #LOC_NFConstruction_truss-octo-3_tags
 
-	MODULE
-	{
-		name = ModuleB9PartSwitch
-		moduleID = meshSwitch
-		switcherDescription = #LOC_NFConstruction_switcher_subtype_title
+  MODULE
+  {
+    name = ModuleB9PartSwitch
+    moduleID = meshSwitch
+    switcherDescription = #LOC_NFConstruction_switcher_subtype_title
 
-		SUBTYPE
-		{
-			name =  Solid
-			title= #LOC_NFConstruction_switcher_subtype_variant1
-			transform = OctoSmall
-			transform = COLLISION13
+    SUBTYPE
+    {
+      name =  Solid
+      title= #LOC_NFConstruction_switcher_subtype_variant1
+      transform = OctoSmall
+      transform = COLLISION13
       descriptionSummary = #LOC_NFConstruction_switcher_truss_solid_summary
       descriptionDetail = #LOC_NFConstruction_switcher_truss_solid_detail
-		}
+      primaryColor = #ffffff
+      secondaryColor = #ffffff
+    }
 
-		SUBTYPE
-		{
-			name = Hollow
-			title= #LOC_NFConstruction_switcher_subtype_variant2
-			transform = OctoSmallHollow
-			transform = OctoSmallHollowStruct
-			transform = COLLISION01
-			transform = COLLISION02
-			transform = COLLISION03
-			transform = COLLISION04
-			transform = COLLISION20
-			transform = COLLISION21
-			node = top02
-			node = bottom02
-			addedMass = -0.0125
-			addedCost = -20
-			crashTolerance = 60
+    SUBTYPE
+    {
+      name = Hollow
+      title= #LOC_NFConstruction_switcher_subtype_variant2
+      transform = OctoSmallHollow
+      transform = OctoSmallHollowStruct
+      transform = COLLISION01
+      transform = COLLISION02
+      transform = COLLISION03
+      transform = COLLISION04
+      transform = COLLISION20
+      transform = COLLISION21
+      node = top02
+      node = bottom02
+      addedMass = -0.0125
+      addedCost = -20
+      crashTolerance = 60
       descriptionSummary = #LOC_NFConstruction_switcher_truss_hollow_summary
       descriptionDetail = #LOC_NFConstruction_switcher_truss_hollow_detail
-		}
-		SUBTYPE
-		{
-			name = Saddle
-			title= #LOC_NFConstruction_switcher_subtype_variant3
-			transform = OctoSmallHollowSaddle
-			transform = OctoSmallHollowStructSaddle
-			transform = COLLISION02
-			transform = COLLISION03
-			transform = COLLISION04
-			transform = COLLISION20
-			transform = COLLISION21
-			node = top02
-			node = bottom02
-			addedMass = -0.0175
-			crashTolerance = 50
-			addedCost = -30
+      primaryColor = #000000
+      secondaryColor = #000000
+    }
+    SUBTYPE
+    {
+      name = Saddle
+      title= #LOC_NFConstruction_switcher_subtype_variant3
+      transform = OctoSmallHollowSaddle
+      transform = OctoSmallHollowStructSaddle
+      transform = COLLISION02
+      transform = COLLISION03
+      transform = COLLISION04
+      transform = COLLISION20
+      transform = COLLISION21
+      node = top02
+      node = bottom02
+      addedMass = -0.0175
+      crashTolerance = 50
+      addedCost = -30
       descriptionSummary = #LOC_NFConstruction_switcher_truss_saddle_summary
       descriptionDetail = #LOC_NFConstruction_switcher_truss_saddle_detail
-		}
-		SUBTYPE
-		{
-			name = Dual
-			title= #LOC_NFConstruction_switcher_subtype_variant4
-			transform = OctoSmallHollowHalf
-			transform = OctoSmallHollowStructHalf
-			transform = COLLISION02
-			transform = COLLISION03
-			transform = COLLISION20
-			transform = COLLISION21
-			node = top02
-			node = bottom02
-			addedMass = -0.025
-			crashTolerance = 40
-			addedCost = -40
+      primaryColor = #ffffff
+      secondaryColor = #000000
+    }
+    SUBTYPE
+    {
+      name = Dual
+      title= #LOC_NFConstruction_switcher_subtype_variant4
+      transform = OctoSmallHollowHalf
+      transform = OctoSmallHollowStructHalf
+      transform = COLLISION02
+      transform = COLLISION03
+      transform = COLLISION20
+      transform = COLLISION21
+      node = top02
+      node = bottom02
+      addedMass = -0.025
+      crashTolerance = 40
+      addedCost = -40
       descriptionSummary = #LOC_NFConstruction_switcher_truss_dual_summary
       descriptionDetail = #LOC_NFConstruction_switcher_truss_dual_detail
-		}
-	}
+      primaryColor = #808080
+      secondaryColor = #000000
+    }
+  }
   MODULE
   {
     name = ModuleCargoPart
