--- a/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-04.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-04.cfg
@@ -2,89 +2,93 @@
 // 2.5m Truss - Structural - Eighth
 PART
 {
-	name = truss-octo-04
-	module = Part
-	author = Chris Adderley (Nertea)
+  name = truss-octo-04
+  module = Part
+  author = Chris Adderley (Nertea)
 
-	MODEL
-	{
-		model = NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-04
-		position = 0.0, 0.0, 0.0
-		scale = 1,1,1
-		rotation = 0, 0, 0
-	}
-	rescaleFactor = 1
+  MODEL
+  {
+    model = NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-04
+    position = 0.0, 0.0, 0.0
+    scale = 1,1,1
+    rotation = 0, 0, 0
+  }
+  rescaleFactor = 1
 
-	node_stack_top01= 0.0, 0.4679988, 0.0, 0.0, 1.0, 0.0, 2
-	node_stack_top02= 0.0, 0.1968966, 0.0, 0.0, -1.0, 0.0, 2
-	node_stack_bottom01 = 0.0, -0.4722692, 0.0, 0.0, -1.0, 0.0, 2
-	node_stack_bottom02 = 0.0, -0.1998693, 0.0, 0.0, 1.0, 0.0, 2
-	node_attach = 1.187252, 0.0, 0.0, 1.0, 0.0, 0.0, 2
+  node_stack_top01= 0.0, 0.4679988, 0.0, 0.0, 1.0, 0.0, 2
+  node_stack_top02= 0.0, 0.1968966, 0.0, 0.0, -1.0, 0.0, 2
+  node_stack_bottom01 = 0.0, -0.4722692, 0.0, 0.0, -1.0, 0.0, 2
+  node_stack_bottom02 = 0.0, -0.1998693, 0.0, 0.0, 1.0, 0.0, 2
+  node_attach = 1.187252, 0.0, 0.0, 1.0, 0.0, 0.0, 2
 
-	bulkheadProfiles = octotruss, srf
+  bulkheadProfiles = octotruss, srf
 
-	TechRequired = nanolathing
-	entryCost = 1200
-	cost = 100
-	category = Structural
-	subcategory = 0
-	title = #LOC_NFConstruction_truss-octo-4_title
-	manufacturer = #LOC_NFConstruction_manufacturer_gigabloks_title
-	description = #LOC_NFConstruction_truss-octo-4_description
-	attachRules = 1,1,1,1,0
+  TechRequired = nanolathing
+  entryCost = 1200
+  cost = 100
+  category = Structural
+  subcategory = 0
+  title = #LOC_NFConstruction_truss-octo-4_title
+  manufacturer = #LOC_NFConstruction_manufacturer_gigabloks_title
+  description = #LOC_NFConstruction_truss-octo-4_description
+  attachRules = 1,1,1,1,0
 
-	// --- standard part parameters ---
-	mass = 0.05625
-	dragModelType = default
-	maximum_drag = 0.2
-	minimum_drag = 0.2
-	angularDrag = 1
-	crashTolerance = 80
-	breakingForce = 200
-	breakingTorque = 200
-	maxTemp = 2000
-	thermalMassModifier = 0.4 // I am hollow
+  // --- standard part parameters ---
+  mass = 0.05625
+  dragModelType = default
+  maximum_drag = 0.2
+  minimum_drag = 0.2
+  angularDrag = 1
+  crashTolerance = 80
+  breakingForce = 200
+  breakingTorque = 200
+  maxTemp = 2000
+  thermalMassModifier = 0.4 // I am hollow
 
-	tags = #LOC_NFConstruction_truss-octo-4_tags
+  tags = #LOC_NFConstruction_truss-octo-4_tags
 
-	MODULE
-	{
-		name = ModuleB9PartSwitch
-		moduleID = meshSwitch
-		switcherDescription = #LOC_NFConstruction_switcher_subtype_title
+  MODULE
+  {
+    name = ModuleB9PartSwitch
+    moduleID = meshSwitch
+    switcherDescription = #LOC_NFConstruction_switcher_subtype_title
 
-		SUBTYPE
-		{
-			name =  Solid
-			title= #LOC_NFConstruction_switcher_subtype_variant1
-			transform = OctoEighth
-			transform = COLLISIONNANO
+    SUBTYPE
+    {
+      name =  Solid
+      title= #LOC_NFConstruction_switcher_subtype_variant1
+      transform = OctoEighth
+      transform = COLLISIONNANO
       descriptionSummary = #LOC_NFConstruction_switcher_truss_solid_summary
       descriptionDetail = #LOC_NFConstruction_switcher_truss_solid_detail
-		}
+      primaryColor = #ffffff
+      secondaryColor = #ffffff
+    }
 
-		SUBTYPE
-		{
-			name = Hollow
-			title= #LOC_NFConstruction_switcher_subtype_variant2
-			transform = OctoEighthHollow
-			transform = OctoEighthHollowCore
-			transform = COLLISION01
-			transform = COLLISION02
-			transform = COLLISION03
-			transform = COLLISION04
-			transform = COLLISION20
-			transform = COLLISION21
-			node = top02
-			node = bottom02
-			addedMass = -0.00625
-			crashTolerance = 60
-			addedCost = -10
+    SUBTYPE
+    {
+      name = Hollow
+      title= #LOC_NFConstruction_switcher_subtype_variant2
+      transform = OctoEighthHollow
+      transform = OctoEighthHollowCore
+      transform = COLLISION01
+      transform = COLLISION02
+      transform = COLLISION03
+      transform = COLLISION04
+      transform = COLLISION20
+      transform = COLLISION21
+      node = top02
+      node = bottom02
+      addedMass = -0.00625
+      crashTolerance = 60
+      addedCost = -10
       descriptionSummary = #LOC_NFConstruction_switcher_truss_hollow_summary
       descriptionDetail = #LOC_NFConstruction_switcher_truss_hollow_detail
-		}
+      primaryColor = #000000
+      secondaryColor = #000000
+    }
 
-	}
+  }
   MODULE
   {
     name = ModuleCargoPart
