--- a/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-angled-crew-01.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-angled-crew-01.cfg
@@ -2,125 +2,131 @@
 // 2.5m Truss angled connector pressurized
 PART
 {
-	name = truss-octo-angled-crew-01
-	module = Part
-	author = Chris Adderley (Nertea)
+  name = truss-octo-angled-crew-01
+  module = Part
+  author = Chris Adderley (Nertea)
 
-	MODEL
-	{
-		model = NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-angled-crew-01
-		position = 0.0, 0.0, 0.0
-		scale = 1,1,1
-		rotation = 0, 0, 0
-	}
-	rescaleFactor = 1
+  MODEL
+  {
+    model = NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-angled-crew-01
+    position = 0.0, 0.0, 0.0
+    scale = 1,1,1
+    rotation = 0, 0, 0
+  }
+  rescaleFactor = 1
 
-	node_stack_top01 = 0.0, 1.199, 1.244, 0.0, 0.0, 1.0, 2
-	node_stack_top02 = 0.0, 0.899, 0.4018, 0.0, 0.5, 0.5, 2
-	node_stack_top03 = 0.0, 0.665, 0.197, 0.0, 0.86602540378, 0.5, 2
-	node_stack_bottom = 0.0, -0.07155213, 0.0, 0.0, -1.0, 0.0, 2
-	node_attach = 0.0, -0.07155213, 0.0, 0.0, -1.0, 0.0, 2
+  node_stack_top01 = 0.0, 1.199, 1.244, 0.0, 0.0, 1.0, 2
+  node_stack_top02 = 0.0, 0.899, 0.4018, 0.0, 0.5, 0.5, 2
+  node_stack_top03 = 0.0, 0.665, 0.197, 0.0, 0.86602540378, 0.5, 2
+  node_stack_bottom = 0.0, -0.07155213, 0.0, 0.0, -1.0, 0.0, 2
+  node_attach = 0.0, -0.07155213, 0.0, 0.0, -1.0, 0.0, 2
 
-	bulkheadProfiles = octotruss, srf
+  bulkheadProfiles = octotruss, srf
 
-	TechRequired =nanolathing
-	entryCost = 3650
-	cost = 1200
-	category = Structural
-	subcategory = 0
-	title = #LOC_NFConstruction_truss-octo-angled-crew-1_title
-	manufacturer = #LOC_NFConstruction_manufacturer_gigabloks_title
-	description = #LOC_NFConstruction_truss-octo-angled-crew-1_description
-	attachRules = 1,1,1,1,0
+  TechRequired =nanolathing
+  entryCost = 3650
+  cost = 1200
+  category = Structural
+  subcategory = 0
+  title = #LOC_NFConstruction_truss-octo-angled-crew-1_title
+  manufacturer = #LOC_NFConstruction_manufacturer_gigabloks_title
+  description = #LOC_NFConstruction_truss-octo-angled-crew-1_description
+  attachRules = 1,1,1,1,0
 
-	// --- standard part parameters ---
-	mass = 0.45
-	dragModelType = default
-	maximum_drag = 0.2
-	minimum_drag = 0.2
-	angularDrag = 1
-	crashTolerance = 80
-	breakingForce = 200
-	breakingTorque = 200
-	maxTemp = 2000
-	thermalMassModifier = 0.4 // I am hollow
+  // --- standard part parameters ---
+  mass = 0.45
+  dragModelType = default
+  maximum_drag = 0.2
+  minimum_drag = 0.2
+  angularDrag = 1
+  crashTolerance = 80
+  breakingForce = 200
+  breakingTorque = 200
+  maxTemp = 2000
+  thermalMassModifier = 0.4 // I am hollow
 
-	tags = #LOC_NFConstruction_truss-octo-angled-crew-1_tags
-	MODULE
-	{
-		name = ModuleColorChanger
-		shaderProperty = _EmissiveColor
-		animRate = 0.8
-		animState = false
-		useRate = true
-		toggleInEditor = true
-		toggleInFlight = true
-		toggleInFlight = true
-		unfocusedRange = 5
-		toggleName = #autoLOC_502011 //#autoLOC_502011 = Toggle Lights
-		eventOnName = #autoLOC_502012 //#autoLOC_502012 = Lights On
-		eventOffName = #autoLOC_502013 //#autoLOC_502013 = Lights Off
-		toggleAction = True
-		defaultActionGroup = Light
-		redCurve
-		{
-			key = 0 0 0 3
-			key = 1 1 0 0
-		}
-		greenCurve
-		{
-			key = 0 0 0 1
-			key = 1 1 1 0
-		}
-		blueCurve
-		{
-			key = 0 0 0 0
-			key = 1 0.7 1.5 0
-		}
-		alphaCurve
-		{
-			key = 0 1
-		}
-	}
-	MODULE
-	{
-		name = ModuleB9PartSwitch
-		moduleID = meshSwitch
-		switcherDescription = #LOC_NFConstruction_switcher_angle_title
+  tags = #LOC_NFConstruction_truss-octo-angled-crew-1_tags
+  MODULE
+  {
+    name = ModuleColorChanger
+    shaderProperty = _EmissiveColor
+    animRate = 0.8
+    animState = false
+    useRate = true
+    toggleInEditor = true
+    toggleInFlight = true
+    toggleInFlight = true
+    unfocusedRange = 5
+    toggleName = #autoLOC_502011 //#autoLOC_502011 = Toggle Lights
+    eventOnName = #autoLOC_502012 //#autoLOC_502012 = Lights On
+    eventOffName = #autoLOC_502013 //#autoLOC_502013 = Lights Off
+    toggleAction = True
+    defaultActionGroup = Light
+    redCurve
+    {
+      key = 0 0 0 3
+      key = 1 1 0 0
+    }
+    greenCurve
+    {
+      key = 0 0 0 1
+      key = 1 1 1 0
+    }
+    blueCurve
+    {
+      key = 0 0 0 0
+      key = 1 0.7 1.5 0
+    }
+    alphaCurve
+    {
+      key = 0 1
+    }
+  }
+  MODULE
+  {
+    name = ModuleB9PartSwitch
+    moduleID = meshSwitch
+    switcherDescription = #LOC_NFConstruction_switcher_angle_title
 
-		SUBTYPE
-		{
-			name = 90 Degrees
-			title = #LOC_NFConstruction_switcher_angle_variant1
-			node = top01
-			transform = Angled90
+    SUBTYPE
+    {
+      name = 90 Degrees
+      title = #LOC_NFConstruction_switcher_angle_variant1
+      node = top01
+      transform = Angled90
       descriptionSummary = #LOC_NFConstruction_switcher_angle_90_summary
       descriptionDetail = #LOC_NFConstruction_switcher_angle_90_detail
-		}
+      primaryColor = #ffffff
+      secondaryColor = #ffffff
+    }
 
-		SUBTYPE
-		{
-			name = 45 Degrees
-			title= #LOC_NFConstruction_switcher_angle_variant2
-			node = top02
-			transform = Angled45
-			addedCost = -250
-			addedMass = -0.125
+    SUBTYPE
+    {
+      name = 45 Degrees
+      title= #LOC_NFConstruction_switcher_angle_variant2
+      node = top02
+      transform = Angled45
+      addedCost = -250
+      addedMass = -0.125
       descriptionSummary = #LOC_NFConstruction_switcher_angle_45_summary
       descriptionDetail = #LOC_NFConstruction_switcher_angle_45_detail
-		}
-		SUBTYPE
-		{
-			name = 30 Degrees
-			title= #LOC_NFConstruction_switcher_angle_variant3
-			node = top03
-			transform = Angled30
-			addedCost = -350
-			addedMass = -0.17
+      primaryColor = #808080
+      secondaryColor = #808080
+    }
+    SUBTYPE
+    {
+      name = 30 Degrees
+      title= #LOC_NFConstruction_switcher_angle_variant3
+      node = top03
+      transform = Angled30
+      addedCost = -350
+      addedMass = -0.17
       descriptionSummary = #LOC_NFConstruction_switcher_angle_30_summary
       descriptionDetail = #LOC_NFConstruction_switcher_angle_30_detail
-		}
-	}
+      primaryColor = #303030
+      secondaryColor = #303030
+    }
+  }
     MODULE
   {
     name = ModuleCargoPart
