--- a/GameData/NearFutureConstruction/Patches/NFConstructionStockPartReplacements.cfg
+++ b/GameData/NearFutureConstruction/Patches/NFConstructionStockPartReplacements.cfg
@@ -3,55 +3,61 @@
 // Cubic strut
 @PART[strutCube]:FOR[zzzzNFConstruction]
 {
-	@author = Chris Adderley (Nertea)
-	@title = #LOC_NFConstruction_truss-micro-03_title
-	@description = #LOC_NFConstruction_truss-micro-03_description
-	@tags = #LOC_NFConstruction_truss-micro-03_tags
-	!mesh = DELETE
-	!MODEL,* {}
-	MODEL
-	{
-		model = NearFutureConstruction/Parts/Truss/truss-micro/truss-micro-3
-		position = 0.0, 0.0, 0.0
-		scale = 1,1,1
-		rotation = 0, 0, 0
-	}
+  @author = Chris Adderley (Nertea)
+  @title = #LOC_NFConstruction_truss-micro-03_title
+  @description = #LOC_NFConstruction_truss-micro-03_description
+  @tags = #LOC_NFConstruction_truss-micro-03_tags
+  !mesh = DELETE
+  !MODEL,* {}
+  MODEL
+  {
+    model = NearFutureConstruction/Parts/Truss/truss-micro/truss-micro-3
+    position = 0.0, 0.0, 0.0
+    scale = 1,1,1
+    rotation = 0, 0, 0
+  }
 
-	MODULE
-	{
-		name = ModuleB9PartSwitch
-		moduleID = meshSwitch
-		switcherDescription = #LOC_NFConstruction_switcher_profile_title
+  MODULE
+  {
+    name = ModuleB9PartSwitch
+    moduleID = meshSwitch
+    switcherDescription = #LOC_NFConstruction_switcher_profile_title
 
-		SUBTYPE
-		{
-			name = Cubic
-			title = #LOC_NFConstruction_switcher_profile_square
-			transform = TrussSquareSmall
+    SUBTYPE
+    {
+      name = Cubic
+      title = #LOC_NFConstruction_switcher_profile_square
+      transform = TrussSquareSmall
       descriptionSummary = #LOC_NFConstruction_switcher_profile_square_summary
       descriptionDetail = #LOC_NFConstruction_switcher_profile_square_detail
-		}
+      primaryColor = #ffffff
+      secondaryColor = #ffffff
+    }
 
-		SUBTYPE
-		{
-			name = Triangular
-			title = #LOC_NFConstruction_switcher_profile_triangular
-			transform = TrussTriSmall
-			addedMass = -0.00025
-			addedCost = -8
+    SUBTYPE
+    {
+      name = Triangular
+      title = #LOC_NFConstruction_switcher_profile_triangular
+      transform = TrussTriSmall
+      addedMass = -0.00025
+      addedCost = -8
       descriptionSummary = #LOC_NFConstruction_switcher_profile_triangular_summary
       descriptionDetail = #LOC_NFConstruction_switcher_profile_triangular_detail
-		}
-		SUBTYPE
-		{
-			name = Planar
-			title = #LOC_NFConstruction_switcher_profile_planar
-			transform = TrussPlaneSmall
-			crashTolerance = 60
-			addedMass = -0.0005
-			addedCost = -12
+      primaryColor = #969696
+      secondaryColor = #969696
+    }
+    SUBTYPE
+    {
+      name = Planar
+      title = #LOC_NFConstruction_switcher_profile_planar
+      transform = TrussPlaneSmall
+      crashTolerance = 60
+      addedMass = -0.0005
+      addedCost = -12
       descriptionSummary = #LOC_NFConstruction_switcher_profile_planar_summary
       descriptionDetail = #LOC_NFConstruction_switcher_profile_planar_detail
-		}
-	}
+      primaryColor = #333333
+      secondaryColor = #333333
+    }
+  }
 }
