--- a/GameData/NearFutureConstruction/Parts/Truss/truss-circular/truss-circular-02.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-circular/truss-circular-02.cfg
@@ -2,173 +2,191 @@
 // 5m Truss - Structural
 PART
 {
-	name = truss-circular-02
-	module = Part
-	author = Chris Adderley (Nertea)
+  name = truss-circular-02
+  module = Part
+  author = Chris Adderley (Nertea)
 
-	MODEL
-	{
-		model = NearFutureConstruction/Parts/Truss/truss-circular/truss-circular-02
-		position = 0.0, 0.0, 0.0
-		scale = 1,1,1
-		rotation = 0, 0, 0
-	}
-	rescaleFactor = 1
+  MODEL
+  {
+    model = NearFutureConstruction/Parts/Truss/truss-circular/truss-circular-02
+    position = 0.0, 0.0, 0.0
+    scale = 1,1,1
+    rotation = 0, 0, 0
+  }
+  rescaleFactor = 1
 
-	node_stack_top01 = 0.0, 3.708, 0.0, 0.0, 1.0, 0.0, 4
-	node_stack_top02 = 0.0, 3.587, 0.0, 0.0, -1.0, 0.0, 3
-	node_stack_bottom01 = 0.0, -3.711, 0.0, 0.0, -1.0, 0.0, 4
-	node_stack_bottom02 = 0.0, -3.611, 0.0, 0.0, 1.0, 0.0, 3
-	node_attach = -2.505, 0.0, 0.0, 1.0, 0.0, 0.0, 4
+  node_stack_top01 = 0.0, 3.708, 0.0, 0.0, 1.0, 0.0, 4
+  node_stack_top02 = 0.0, 3.587, 0.0, 0.0, -1.0, 0.0, 3
+  node_stack_bottom01 = 0.0, -3.711, 0.0, 0.0, -1.0, 0.0, 4
+  node_stack_bottom02 = 0.0, -3.611, 0.0, 0.0, 1.0, 0.0, 3
+  node_attach = -2.505, 0.0, 0.0, 1.0, 0.0, 0.0, 4
 
 
-	TechRequired = nanolathing
-	entryCost = 3400
-	cost = 1800
-	category = Structural
-	subcategory = 0
-	title = #LOC_NFConstruction_truss-circular-02_title
-	manufacturer = #LOC_NFConstruction_manufacturer_gigabloks_title
-	description = #LOC_NFConstruction_truss-circular-02_description
-	attachRules = 1,1,1,1,0
+  TechRequired = nanolathing
+  entryCost = 3400
+  cost = 1800
+  category = Structural
+  subcategory = 0
+  title = #LOC_NFConstruction_truss-circular-02_title
+  manufacturer = #LOC_NFConstruction_manufacturer_gigabloks_title
+  description = #LOC_NFConstruction_truss-circular-02_description
+  attachRules = 1,1,1,1,0
 
-	bulkheadProfiles = size4, srf
+  bulkheadProfiles = size4, srf
 
-	// --- standard part parameters ---
-	mass = 1.5
-	dragModelType = default
-	maximum_drag = 0.2
-	minimum_drag = 0.2
-	angularDrag = 1
-	crashTolerance = 80
-	breakingForce = 200
-	breakingTorque = 200
-	maxTemp = 2000
-	thermalMassModifier = 0.4 // I am hollow
+  // --- standard part parameters ---
+  mass = 1.5
+  dragModelType = default
+  maximum_drag = 0.2
+  minimum_drag = 0.2
+  angularDrag = 1
+  crashTolerance = 80
+  breakingForce = 200
+  breakingTorque = 200
+  maxTemp = 2000
+  thermalMassModifier = 0.4 // I am hollow
 
-	tags = #LOC_NFConstruction_truss-circular-02_tags
+  tags = #LOC_NFConstruction_truss-circular-02_tags
 
-	MODULE
-	{
-		name = ModuleB9PartSwitch
-		moduleID = meshSwitch
-		switcherDescription = #LOC_NFConstruction_switcher_core_title
-		SUBTYPE
-		{
-			name = None
-			title = #LOC_NFConstruction_switcher_core_variant1
+  MODULE
+  {
+    name = ModuleB9PartSwitch
+    moduleID = meshSwitch
+    switcherDescription = #LOC_NFConstruction_switcher_core_title
+    SUBTYPE
+    {
+      name = None
+      title = #LOC_NFConstruction_switcher_core_variant1
       descriptionSummary = #LOC_NFConstruction_switcher_core_none_summary
       descriptionDetail = #LOC_NFConstruction_switcher_core_none_detail
-		}
-		SUBTYPE
-		{
-			name = Solid
-			title = #LOC_NFConstruction_switcher_core_variant2
-			transform = CENTER
-			transform = COLLIDER_CTR
-			addedMass = 0.25
-			addedCost = 360
+      primaryColor = #000000
+      secondaryColor = #000000
+    }
+    SUBTYPE
+    {
+      name = Solid
+      title = #LOC_NFConstruction_switcher_core_variant2
+      transform = CENTER
+      transform = COLLIDER_CTR
+      addedMass = 0.25
+      addedCost = 360
+      primaryColor = #ffffff
+      secondaryColor = #ffffff
       descriptionSummary = #LOC_NFConstruction_switcher_core_solid_summary
       descriptionDetail = #LOC_NFConstruction_switcher_core_solid_detail
-		}
-	}
-	MODULE
-	{
-		name = ModuleB9PartSwitch
-		moduleID = meshSwitch2
-		switcherDescription = #LOC_NFConstruction_switcher_truss_title
-		SUBTYPE
-		{
-			name = Solid
-			title = #LOC_NFConstruction_switcher_truss_variant1
-			transform = TRUSS
-			transform = COLLIDER_OUTERB001
-			transform = COLLIDER_OUTERB002
-			transform = COLLIDER_OUTERB003
-			transform = COLLIDER_OUTERB004
-			transform = COLLIDER_OUTERB005
-			transform = COLLIDER_OUTERA001
-			transform = COLLIDER_OUTERA002
-			transform = COLLIDER_OUTERA003
-			transform = COLLIDER_OUTERA004
-			transform = COLLIDER_OUTERA005
+    }
+  }
+  MODULE
+  {
+    name = ModuleB9PartSwitch
+    moduleID = meshSwitch2
+    switcherDescription = #LOC_NFConstruction_switcher_truss_title
+    SUBTYPE
+    {
+      name = Solid
+      title = #LOC_NFConstruction_switcher_truss_variant1
+      transform = TRUSS
+      transform = COLLIDER_OUTERB001
+      transform = COLLIDER_OUTERB002
+      transform = COLLIDER_OUTERB003
+      transform = COLLIDER_OUTERB004
+      transform = COLLIDER_OUTERB005
+      transform = COLLIDER_OUTERA001
+      transform = COLLIDER_OUTERA002
+      transform = COLLIDER_OUTERA003
+      transform = COLLIDER_OUTERA004
+      transform = COLLIDER_OUTERA005
+      primaryColor = #ffffff
+      secondaryColor = #ffffff
       descriptionSummary = #LOC_NFConstruction_switcher_truss_solid_summary
       descriptionDetail = #LOC_NFConstruction_switcher_truss_solid_detail
-		}
-		SUBTYPE
-		{
-			name =  Saddle
-			title = #LOC_NFConstruction_switcher_truss_variant3
-			transform = TRUSSSADDLE
-			transform = COLLIDER_OUTERB001
-			transform = COLLIDER_OUTERB002
-			transform = COLLIDER_OUTERB003
-			transform = COLLIDER_OUTERB004
-			transform = COLLIDER_OUTERB005
-			addedMass = -0.2
-			addedCost = -540
+    }
+    SUBTYPE
+    {
+      name =  Saddle
+      title = #LOC_NFConstruction_switcher_truss_variant3
+      transform = TRUSSSADDLE
+      transform = COLLIDER_OUTERB001
+      transform = COLLIDER_OUTERB002
+      transform = COLLIDER_OUTERB003
+      transform = COLLIDER_OUTERB004
+      transform = COLLIDER_OUTERB005
+      addedMass = -0.2
+      addedCost = -540
       descriptionSummary = #LOC_NFConstruction_switcher_truss_saddle_summary
       descriptionDetail = #LOC_NFConstruction_switcher_truss_saddle_detail
-		}
-		SUBTYPE
-		{
-			name = Hollow
-			title = #LOC_NFConstruction_switcher_truss_variant2
-			transform = TRUSSHOLLOW
-			addedMass = -0.4
-			addedCost = -1080
+      primaryColor = #ffffff
+      secondaryColor = #000000
+    }
+    SUBTYPE
+    {
+      name = Hollow
+      title = #LOC_NFConstruction_switcher_truss_variant2
+      transform = TRUSSHOLLOW
+      addedMass = -0.4
+      addedCost = -1080
       descriptionSummary = #LOC_NFConstruction_switcher_truss_hollow_summary
       descriptionDetail = #LOC_NFConstruction_switcher_truss_hollow_detail
-		}
-	}
-	MODULE
-	{
-		name = ModuleB9PartSwitch
-		moduleID = meshSwitch3
-		switcherDescription = #LOC_NFConstruction_switcher_endcap_title1
-		SUBTYPE
-		{
-			name = Basic
-			title = #LOC_NFConstruction_switcher_endcap_variant1
+      primaryColor = #000000
+      secondaryColor = #000000
+    }
+  }
+  MODULE
+  {
+    name = ModuleB9PartSwitch
+    moduleID = meshSwitch3
+    switcherDescription = #LOC_NFConstruction_switcher_endcap_title1
+    SUBTYPE
+    {
+      name = Basic
+      title = #LOC_NFConstruction_switcher_endcap_variant1
       descriptionSummary = #LOC_NFConstruction_switcher_endcap_basic_summary
       descriptionDetail = #LOC_NFConstruction_switcher_endcap_basic_detail
-		}
-		SUBTYPE
-		{
-			name = Solid
-			title = #LOC_NFConstruction_switcher_endcap_variant2
-			node = top02
-			transform = TOP
-			transform = COLLIDER_TOP
-			addedMass = 0.05
-			addedCost = 100
+      primaryColor = #000000
+      secondaryColor = #000000
+    }
+    SUBTYPE
+    {
+      name = Solid
+      title = #LOC_NFConstruction_switcher_endcap_variant2
+      node = top02
+      transform = TOP
+      transform = COLLIDER_TOP
+      addedMass = 0.05
+      addedCost = 100
       descriptionSummary = #LOC_NFConstruction_switcher_endcap_solid_summary
       descriptionDetail = #LOC_NFConstruction_switcher_endcap_solid_detail
-		}
-	}
-	MODULE
-	{
-		name = ModuleB9PartSwitch
-		moduleID = meshSwitch4
-		switcherDescription = #LOC_NFConstruction_switcher_endcap_title2
-		SUBTYPE
-		{
-			name = Basic
-			title = #LOC_NFConstruction_switcher_endcap_variant1
+      primaryColor = #ffffff
+      secondaryColor = #ffffff
+    }
+  }
+  MODULE
+  {
+    name = ModuleB9PartSwitch
+    moduleID = meshSwitch4
+    switcherDescription = #LOC_NFConstruction_switcher_endcap_title2
+    SUBTYPE
+    {
+      name = Basic
+      title = #LOC_NFConstruction_switcher_endcap_variant1
       descriptionSummary = #LOC_NFConstruction_switcher_endcap_basic_summary
       descriptionDetail = #LOC_NFConstruction_switcher_endcap_basic_detail
-		}
-		SUBTYPE
-		{
-			name = Solid
-			title = #LOC_NFConstruction_switcher_endcap_variant2
-			node = bottom02
-			transform = BOTTOM
-			transform = COLLIDER_BOTTOM
-			addedMass = 0.05
-			addedCost = 100
+      primaryColor = #000000
+      secondaryColor = #000000
+    }
+    SUBTYPE
+    {
+      name = Solid
+      title = #LOC_NFConstruction_switcher_endcap_variant2
+      node = bottom02
+      transform = BOTTOM
+      transform = COLLIDER_BOTTOM
+      addedMass = 0.05
+      addedCost = 100
       descriptionSummary = #LOC_NFConstruction_switcher_endcap_solid_summary
       descriptionDetail = #LOC_NFConstruction_switcher_endcap_solid_detail
-		}
-	}
+      primaryColor = #ffffff
+      secondaryColor = #ffffff
+    }
+  }
 }
