--- a/GameData/NearFutureConstruction/Parts/Truss/truss-circular/truss-circular-03.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-circular/truss-circular-03.cfg
@@ -2,174 +2,192 @@
 // 5m Truss - Structural Half
 PART
 {
-	name = truss-circular-03
-	module = Part
-	author = Chris Adderley (Nertea)
+  name = truss-circular-03
+  module = Part
+  author = Chris Adderley (Nertea)
 
-	MODEL
-	{
-		model = NearFutureConstruction/Parts/Truss/truss-circular/truss-circular-03
-		position = 0.0, 0.0, 0.0
-		scale = 1,1,1
-		rotation = 0, 0, 0
-	}
-	rescaleFactor = 1
+  MODEL
+  {
+    model = NearFutureConstruction/Parts/Truss/truss-circular/truss-circular-03
+    position = 0.0, 0.0, 0.0
+    scale = 1,1,1
+    rotation = 0, 0, 0
+  }
+  rescaleFactor = 1
 
-	node_stack_top01 = 0.0, 1.871, 0.0, 0.0, 1.0, 0.0, 4
-	node_stack_top02 = 0.0, 1.77, 0.0, 0.0, -1.0, 0.0, 3
-	node_stack_bottom01 = 0.0, -1.88, 0.0, 0.0, -1.0, 0.0, 4
-	node_stack_bottom02 = 0.0, -1.777, 0.0, 0.0, 1.0, 0.0, 3
-	node_attach = -2.505, 0.0, 0.0, 1.0, 0.0, 0.0, 4
+  node_stack_top01 = 0.0, 1.871, 0.0, 0.0, 1.0, 0.0, 4
+  node_stack_top02 = 0.0, 1.77, 0.0, 0.0, -1.0, 0.0, 3
+  node_stack_bottom01 = 0.0, -1.88, 0.0, 0.0, -1.0, 0.0, 4
+  node_stack_bottom02 = 0.0, -1.777, 0.0, 0.0, 1.0, 0.0, 3
+  node_attach = -2.505, 0.0, 0.0, 1.0, 0.0, 0.0, 4
 
 
-	TechRequired = nanolathing
-	entryCost = 2000
-	cost = 900
-	category = Structural
-	subcategory = 0
-	title = #LOC_NFConstruction_truss-circular-03_title
-	manufacturer = #LOC_NFConstruction_manufacturer_gigabloks_title
-	description = #LOC_NFConstruction_truss-circular-03_description
-	attachRules = 1,1,1,1,0
+  TechRequired = nanolathing
+  entryCost = 2000
+  cost = 900
+  category = Structural
+  subcategory = 0
+  title = #LOC_NFConstruction_truss-circular-03_title
+  manufacturer = #LOC_NFConstruction_manufacturer_gigabloks_title
+  description = #LOC_NFConstruction_truss-circular-03_description
+  attachRules = 1,1,1,1,0
 
-	bulkheadProfiles = size4, srf
+  bulkheadProfiles = size4, srf
 
-	// --- standard part parameters ---
-	mass = 0.75
-	dragModelType = default
-	maximum_drag = 0.2
-	minimum_drag = 0.2
-	angularDrag = 1
-	crashTolerance = 80
-	breakingForce = 200
-	breakingTorque = 200
-	maxTemp = 2000
-	thermalMassModifier = 0.4 // I am hollow
+  // --- standard part parameters ---
+  mass = 0.75
+  dragModelType = default
+  maximum_drag = 0.2
+  minimum_drag = 0.2
+  angularDrag = 1
+  crashTolerance = 80
+  breakingForce = 200
+  breakingTorque = 200
+  maxTemp = 2000
+  thermalMassModifier = 0.4 // I am hollow
 
-	tags = #LOC_NFConstruction_truss-circular-03_tags
+  tags = #LOC_NFConstruction_truss-circular-03_tags
 
-	MODULE
-	{
-		name = ModuleB9PartSwitch
-		moduleID = meshSwitch
-		switcherDescription = #LOC_NFConstruction_switcher_core_title
-		SUBTYPE
-		{
-			name = None
-			title = #LOC_NFConstruction_switcher_core_variant1
+  MODULE
+  {
+    name = ModuleB9PartSwitch
+    moduleID = meshSwitch
+    switcherDescription = #LOC_NFConstruction_switcher_core_title
+    SUBTYPE
+    {
+      name = None
+      title = #LOC_NFConstruction_switcher_core_variant1
       descriptionSummary = #LOC_NFConstruction_switcher_core_none_summary
       descriptionDetail = #LOC_NFConstruction_switcher_core_none_detail
-		}
-		SUBTYPE
-		{
-			name = Solid
-			title = #LOC_NFConstruction_switcher_core_variant2
-			transform = CENTERSML
-			transform = COLLIDER_CTRSML
-			addedMass = 0.125
-			addedCost = 180
+      primaryColor = #000000
+      secondaryColor = #000000
+    }
+    SUBTYPE
+    {
+      name = Solid
+      title = #LOC_NFConstruction_switcher_core_variant2
+      transform = CENTERSML
+      transform = COLLIDER_CTRSML
+      addedMass = 0.125
+      addedCost = 180
+      primaryColor = #ffffff
+      secondaryColor = #ffffff
       descriptionSummary = #LOC_NFConstruction_switcher_core_solid_summary
       descriptionDetail = #LOC_NFConstruction_switcher_core_solid_detail
-		}
-	}
-	MODULE
-	{
-		name = ModuleB9PartSwitch
-		moduleID = meshSwitch2
-		switcherDescription = #LOC_NFConstruction_switcher_truss_title
-		SUBTYPE
-		{
-			name = Solid
-			title = #LOC_NFConstruction_switcher_truss_variant1
-			transform = TRUSSSML
-			transform = COLLIDER_OUTERSMLB01
-			transform = COLLIDER_OUTERSMLB02
-			transform = COLLIDER_OUTERSMLB03
-			transform = COLLIDER_OUTERSMLB04
-			transform = COLLIDER_OUTERSMLB05
-			transform = COLLIDER_OUTERSMLA01
-			transform = COLLIDER_OUTERSMLA02
-			transform = COLLIDER_OUTERSMLA03
-			transform = COLLIDER_OUTERSMLA04
-			transform = COLLIDER_OUTERSMLA05
+    }
+  }
+  MODULE
+  {
+    name = ModuleB9PartSwitch
+    moduleID = meshSwitch2
+    switcherDescription = #LOC_NFConstruction_switcher_truss_title
+    SUBTYPE
+    {
+      name = Solid
+      title = #LOC_NFConstruction_switcher_truss_variant1
+      transform = TRUSSSML
+      transform = COLLIDER_OUTERSMLB01
+      transform = COLLIDER_OUTERSMLB02
+      transform = COLLIDER_OUTERSMLB03
+      transform = COLLIDER_OUTERSMLB04
+      transform = COLLIDER_OUTERSMLB05
+      transform = COLLIDER_OUTERSMLA01
+      transform = COLLIDER_OUTERSMLA02
+      transform = COLLIDER_OUTERSMLA03
+      transform = COLLIDER_OUTERSMLA04
+      transform = COLLIDER_OUTERSMLA05
+      primaryColor = #ffffff
+      secondaryColor = #ffffff
       descriptionSummary = #LOC_NFConstruction_switcher_truss_solid_summary
       descriptionDetail = #LOC_NFConstruction_switcher_truss_solid_detail
 
-		}
-		SUBTYPE
-		{
-			name = Saddle
-			title = #LOC_NFConstruction_switcher_truss_variant3
-			transform = TRUSSSMLSADDLE
-			transform = COLLIDER_OUTERSMLB01
-			transform = COLLIDER_OUTERSMLB02
-			transform = COLLIDER_OUTERSMLB03
-			transform = COLLIDER_OUTERSMLB04
-			transform = COLLIDER_OUTERSMLB05
-			addedMass = -0.1
-			addedCost = -270
+    }
+    SUBTYPE
+    {
+      name = Saddle
+      title = #LOC_NFConstruction_switcher_truss_variant3
+      transform = TRUSSSMLSADDLE
+      transform = COLLIDER_OUTERSMLB01
+      transform = COLLIDER_OUTERSMLB02
+      transform = COLLIDER_OUTERSMLB03
+      transform = COLLIDER_OUTERSMLB04
+      transform = COLLIDER_OUTERSMLB05
+      addedMass = -0.1
+      addedCost = -270
       descriptionSummary = #LOC_NFConstruction_switcher_truss_saddle_summary
       descriptionDetail = #LOC_NFConstruction_switcher_truss_saddle_detail
-		}
-		SUBTYPE
-		{
-			name = Hollow
-			title = #LOC_NFConstruction_switcher_truss_variant2
-			transform = TRUSSSMLHOLLOW
-			addedMass = -0.2
-			addedCost = -540
+      primaryColor = #ffffff
+      secondaryColor = #000000
+    }
+    SUBTYPE
+    {
+      name = Hollow
+      title = #LOC_NFConstruction_switcher_truss_variant2
+      transform = TRUSSSMLHOLLOW
+      addedMass = -0.2
+      addedCost = -540
+      primaryColor = #000000
+      secondaryColor = #000000
       descriptionSummary = #LOC_NFConstruction_switcher_truss_hollow_summary
       descriptionDetail = #LOC_NFConstruction_switcher_truss_hollow_detail
-		}
-	}
-	MODULE
-	{
-		name = ModuleB9PartSwitch
-		moduleID = meshSwitch3
-		switcherDescription = #LOC_NFConstruction_switcher_endcap_title1
-		SUBTYPE
-		{
-			name = Basic
-			title = #LOC_NFConstruction_switcher_endcap_variant1
+    }
+  }
+  MODULE
+  {
+    name = ModuleB9PartSwitch
+    moduleID = meshSwitch3
+    switcherDescription = #LOC_NFConstruction_switcher_endcap_title1
+    SUBTYPE
+    {
+      name = Basic
+      title = #LOC_NFConstruction_switcher_endcap_variant1
       descriptionSummary = #LOC_NFConstruction_switcher_endcap_basic_summary
       descriptionDetail = #LOC_NFConstruction_switcher_endcap_basic_detail
-		}
-		SUBTYPE
-		{
-			name = Solid
-			title = #LOC_NFConstruction_switcher_endcap_variant2
-			node = top02
-			transform = TOPSML
-			transform = COLLIDER_TOPSML
-			addedMass = 0.05
-			addedCost = 100
+      primaryColor = #000000
+      secondaryColor = #000000
+    }
+    SUBTYPE
+    {
+      name = Solid
+      title = #LOC_NFConstruction_switcher_endcap_variant2
+      node = top02
+      transform = TOPSML
+      transform = COLLIDER_TOPSML
+      addedMass = 0.05
+      addedCost = 100
       descriptionSummary = #LOC_NFConstruction_switcher_endcap_solid_summary
       descriptionDetail = #LOC_NFConstruction_switcher_endcap_solid_detail
-		}
-	}
-	MODULE
-	{
-		name = ModuleB9PartSwitch
-		moduleID = meshSwitch4
-		switcherDescription = #LOC_NFConstruction_switcher_endcap_title2
-		SUBTYPE
-		{
-			name = Basic
-			title = #LOC_NFConstruction_switcher_endcap_variant1
+      primaryColor = #ffffff
+      secondaryColor = #ffffff
+    }
+  }
+  MODULE
+  {
+    name = ModuleB9PartSwitch
+    moduleID = meshSwitch4
+    switcherDescription = #LOC_NFConstruction_switcher_endcap_title2
+    SUBTYPE
+    {
+      name = Basic
+      title = #LOC_NFConstruction_switcher_endcap_variant1
       descriptionSummary = #LOC_NFConstruction_switcher_endcap_basic_summary
       descriptionDetail = #LOC_NFConstruction_switcher_endcap_basic_detail
-		}
-		SUBTYPE
-		{
-			name = Solid
-			title = #LOC_NFConstruction_switcher_endcap_variant2
-			node = bottom02
-			transform = BOTTOMSML
-			transform = COLLIDER_BOTTOMSML
-			addedMass = 0.05
-			addedCost = 100
+      primaryColor = #000000
+      secondaryColor = #000000
+    }
+    SUBTYPE
+    {
+      name = Solid
+      title = #LOC_NFConstruction_switcher_endcap_variant2
+      node = bottom02
+      transform = BOTTOMSML
+      transform = COLLIDER_BOTTOMSML
+      addedMass = 0.05
+      addedCost = 100
       descriptionSummary = #LOC_NFConstruction_switcher_endcap_solid_summary
       descriptionDetail = #LOC_NFConstruction_switcher_endcap_solid_detail
-		}
-	}
+      primaryColor = #ffffff
+      secondaryColor = #ffffff
+    }
+  }
 }
