--- a/GameData/NearFutureConstruction/Parts/Truss/truss-circular/truss-circular-adapter-01.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-circular/truss-circular-adapter-01.cfg
@@ -2,73 +2,77 @@
 // 5m Truss - Long Adapter
 PART
 {
-	name = truss-circular-adapter-01
-	module = Part
-	author = Chris Adderley (Nertea)
+  name = truss-circular-adapter-01
+  module = Part
+  author = Chris Adderley (Nertea)
 
-	MODEL
-	{
-		model = NearFutureConstruction/Parts/Truss/truss-circular/truss-circular-adapter-01
-		position = 0.0, 0.0, 0.0
-		scale = 1,1,1
-		rotation = 0, 0, 0
-	}
-	rescaleFactor = 1
+  MODEL
+  {
+    model = NearFutureConstruction/Parts/Truss/truss-circular/truss-circular-adapter-01
+    position = 0.0, 0.0, 0.0
+    scale = 1,1,1
+    rotation = 0, 0, 0
+  }
+  rescaleFactor = 1
 
-	node_stack_top01 = 0.0, 1.029, 0.0, 0.0, 1.0, 0.0, 4
-	node_stack_bottom01 = 0.0, -1.004, 0.0, 0.0, -1.0, 0.0, 3
+  node_stack_top01 = 0.0, 1.029, 0.0, 0.0, 1.0, 0.0, 4
+  node_stack_bottom01 = 0.0, -1.004, 0.0, 0.0, -1.0, 0.0, 3
 
 
 
-	TechRequired = nanolathing
-	entryCost = 4500
-	cost = 1400
-	category = Structural
-	subcategory = 0
-	title = #LOC_NFConstruction_truss-circular-adapter-01_title
-	manufacturer = #LOC_NFConstruction_manufacturer_gigabloks_title
-	description = #LOC_NFConstruction_truss-circular-adapter-01_description
-	attachRules = 1,1,1,1,0
+  TechRequired = nanolathing
+  entryCost = 4500
+  cost = 1400
+  category = Structural
+  subcategory = 0
+  title = #LOC_NFConstruction_truss-circular-adapter-01_title
+  manufacturer = #LOC_NFConstruction_manufacturer_gigabloks_title
+  description = #LOC_NFConstruction_truss-circular-adapter-01_description
+  attachRules = 1,1,1,1,0
 
-	bulkheadProfiles = size4, size3
+  bulkheadProfiles = size4, size3
 
-	// --- standard part parameters ---
-	mass = 0.4
-	dragModelType = default
-	maximum_drag = 0.2
-	minimum_drag = 0.2
-	angularDrag = 1
-	crashTolerance = 80
-	breakingForce = 200
-	breakingTorque = 200
-	maxTemp = 2000
-	thermalMassModifier = 0.4 // I am hollow
+  // --- standard part parameters ---
+  mass = 0.4
+  dragModelType = default
+  maximum_drag = 0.2
+  minimum_drag = 0.2
+  angularDrag = 1
+  crashTolerance = 80
+  breakingForce = 200
+  breakingTorque = 200
+  maxTemp = 2000
+  thermalMassModifier = 0.4 // I am hollow
 
-	tags = #LOC_NFConstruction_truss-circular-adapter-01_tags
+  tags = #LOC_NFConstruction_truss-circular-adapter-01_tags
 
-	MODULE
-	{
-		name = ModuleB9PartSwitch
-		moduleID = meshSwitch
-		switcherDescription = #LOC_NFConstruction_switcher_core_title
-		SUBTYPE
-		{
-			name = None
-			title = #LOC_NFConstruction_switcher_core_variant1
-			transform = AdapterCoreBit
+  MODULE
+  {
+    name = ModuleB9PartSwitch
+    moduleID = meshSwitch
+    switcherDescription = #LOC_NFConstruction_switcher_core_title
+    SUBTYPE
+    {
+      name = None
+      title = #LOC_NFConstruction_switcher_core_variant1
+      transform = AdapterCoreBit
       descriptionSummary = #LOC_NFConstruction_switcher_core_none_summary
       descriptionDetail = #LOC_NFConstruction_switcher_core_none_detail
-		}
-		SUBTYPE
-		{
-			name = Solid
-			title = #LOC_NFConstruction_switcher_core_variant2
-			transform = ADAPTERCore
-			transform = COLLIDER_ADAPTCORE
-			addedMass = 0.1
-			addedCost = 300
+      primaryColor = #000000
+      secondaryColor = #000000
+    }
+    SUBTYPE
+    {
+      name = Solid
+      title = #LOC_NFConstruction_switcher_core_variant2
+      transform = ADAPTERCore
+      transform = COLLIDER_ADAPTCORE
+      addedMass = 0.1
+      addedCost = 300
       descriptionSummary = #LOC_NFConstruction_switcher_core_solid_summary
       descriptionDetail = #LOC_NFConstruction_switcher_core_solid_detail
-		}
-	}
+      primaryColor = #ffffff
+      secondaryColor = #ffffff
+    }
+  }
 }
