--- a/GameData/NearFutureConstruction/Parts/Truss/truss-hex/truss-hex-01.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-hex/truss-hex-01.cfg
@@ -2,170 +2,176 @@
 // 1.25m Truss - Long
 PART
 {
-	name = truss-hex-01
-	module = Part
-	author = Chris Adderley (Nertea)
+  name = truss-hex-01
+  module = Part
+  author = Chris Adderley (Nertea)
 
-	MODEL
-	{
-		model = NearFutureConstruction/Parts/Truss/truss-hex/truss-hex-01
-		position = 0.0, 0.0, 0.0
-		scale = 1,1,1
-		rotation = 0, 0, 0
-	}
-	rescaleFactor = 1
+  MODEL
+  {
+    model = NearFutureConstruction/Parts/Truss/truss-hex/truss-hex-01
+    position = 0.0, 0.0, 0.0
+    scale = 1,1,1
+    rotation = 0, 0, 0
+  }
+  rescaleFactor = 1
 
-	node_stack_top01 = 0.0, 1.873513, 0.0, 0.0, 1.0, 0.0, 1
-	node_stack_top02 = 0.0, 1.745214, 0.0, 0.0, -1.0, 0.0, 1
-	node_stack_bottom01 = 0.0,-1.871205, 0.0, 0.0, -1.0, 0.0, 1
-	node_stack_bottom02 = 0.0, -1.742394, 0.0, 0.0, 1.0, 0.0, 1
-	node_attach = -0.8413761,0.0, 0.0, -1.0, 0.0, 0.0, 1
+  node_stack_top01 = 0.0, 1.873513, 0.0, 0.0, 1.0, 0.0, 1
+  node_stack_top02 = 0.0, 1.745214, 0.0, 0.0, -1.0, 0.0, 1
+  node_stack_bottom01 = 0.0,-1.871205, 0.0, 0.0, -1.0, 0.0, 1
+  node_stack_bottom02 = 0.0, -1.742394, 0.0, 0.0, 1.0, 0.0, 1
+  node_attach = -0.8413761,0.0, 0.0, -1.0, 0.0, 0.0, 1
 
 
-	TechRequired = advMetalworks
-	entryCost = 2000
-	cost = 400
-	category = Structural
-	subcategory = 0
-	title = #LOC_NFConstruction_truss-hex-01_title
-	manufacturer = #LOC_NFConstruction_manufacturer_gigabloks_title
-	description = #LOC_NFConstruction_truss-hex-01_description
-	attachRules = 1,1,1,1,0
+  TechRequired = advMetalworks
+  entryCost = 2000
+  cost = 400
+  category = Structural
+  subcategory = 0
+  title = #LOC_NFConstruction_truss-hex-01_title
+  manufacturer = #LOC_NFConstruction_manufacturer_gigabloks_title
+  description = #LOC_NFConstruction_truss-hex-01_description
+  attachRules = 1,1,1,1,0
 
-	bulkheadProfiles = hextruss, srf
+  bulkheadProfiles = hextruss, srf
 
-	// --- standard part parameters ---
-	mass = 0.2
-	dragModelType = default
-	maximum_drag = 0.2
-	minimum_drag = 0.2
-	angularDrag = 1
-	crashTolerance = 80
-	breakingForce = 200
-	breakingTorque = 200
-	maxTemp = 2000
-	thermalMassModifier = 0.4 // I am hollow
+  // --- standard part parameters ---
+  mass = 0.2
+  dragModelType = default
+  maximum_drag = 0.2
+  minimum_drag = 0.2
+  angularDrag = 1
+  crashTolerance = 80
+  breakingForce = 200
+  breakingTorque = 200
+  maxTemp = 2000
+  thermalMassModifier = 0.4 // I am hollow
 
-	tags = #LOC_NFConstruction_truss-hex-01_tags
+  tags = #LOC_NFConstruction_truss-hex-01_tags
 
-	MODULE
-	{
-		name = ModuleB9DisableTransform
-		transform = HexArTankLrg
-		transform = HexLH2OTankLrg
-		transform = HexLH2TankLrg
-		transform = HexLiTankLrg
-		transform = HexLH2OTankLrgFoil
-	}
+  MODULE
+  {
+    name = ModuleB9DisableTransform
+    transform = HexArTankLrg
+    transform = HexLH2OTankLrg
+    transform = HexLH2TankLrg
+    transform = HexLiTankLrg
+    transform = HexLH2OTankLrgFoil
+  }
 
-	MODULE
-	{
-		name = ModuleB9PartSwitch
-		moduleID = meshSwitch
-		switcherDescription = #LOC_NFConstruction_switcher_subtype_title
-		baseVolume = 800
-		SUBTYPE
-		{
-			name = Solid
-			title = #LOC_NFConstruction_switcher_subtype_variant1
-			transform = LargeTruss
-			transform = COLLIDERLRG
+  MODULE
+  {
+    name = ModuleB9PartSwitch
+    moduleID = meshSwitch
+    switcherDescription = #LOC_NFConstruction_switcher_subtype_title
+    baseVolume = 800
+    SUBTYPE
+    {
+      name = Solid
+      title = #LOC_NFConstruction_switcher_subtype_variant1
+      transform = LargeTruss
+      transform = COLLIDERLRG
       descriptionSummary = #LOC_NFConstruction_switcher_truss_solid_summary
       descriptionDetail = #LOC_NFConstruction_switcher_truss_solid_detail
-		}
+      primaryColor = #ffffff
+      secondaryColor = #000000
+    }
 
-		SUBTYPE
-		{
-			name = Hollow
-			title = #LOC_NFConstruction_switcher_subtype_variant2
-			transform = LargeTrussHollow
-			transform = COLLIDEREND004
-			transform = COLLIDEREND005
-			transform = COLLIDERSIDE01
-			transform = COLLIDERSIDE002
-			transform = COLLIDERSIDE003
-			node = top02
-			node = bottom02
-			crashTolerance = 60
-			addedMass = -0.04
-			addedCost = -100
+    SUBTYPE
+    {
+      name = Hollow
+      title = #LOC_NFConstruction_switcher_subtype_variant2
+      transform = LargeTrussHollow
+      transform = COLLIDEREND004
+      transform = COLLIDEREND005
+      transform = COLLIDERSIDE01
+      transform = COLLIDERSIDE002
+      transform = COLLIDERSIDE003
+      node = top02
+      node = bottom02
+      crashTolerance = 60
+      addedMass = -0.04
+      addedCost = -100
       descriptionSummary = #LOC_NFConstruction_switcher_truss_hollow_summary
       descriptionDetail = #LOC_NFConstruction_switcher_truss_hollow_detail
-		}
-		SUBTYPE
-		{
-			name = LFO
-			title= #LOC_NFConstruction_switcher_subtype_variant_fuel_LFO
-			tankType = LFOX
-			transform = HexLFOTankLong
-			transform = LargeTruss
-			transform = COLLIDERLRG
-			addedCost = 2696
-			crashTolerance = 50
+      primaryColor = #000000
+      secondaryColor = #000000
+    }
+    SUBTYPE
+    {
+      name = LFO
+      title= #LOC_NFConstruction_switcher_subtype_variant_fuel_LFO
+      tankType = LFOX
+      transform = HexLFOTankLong
+      transform = LargeTruss
+      transform = COLLIDERLRG
+      addedCost = 2696
+      crashTolerance = 50
       descriptionSummary = #LOC_NFConstruction_switcher_subtype_variant_LFO_summary
       descriptionDetail = #LOC_NFConstruction_switcher_subtype_variant_LFO_detail
-		}
-		SUBTYPE
-		{
-			name = LF
-			title= #LOC_NFConstruction_switcher_subtype_variant_fuel_LF
-			tankType = LF
-			transform = HexLFTankLong
-			transform = LargeTruss
-			transform = COLLIDERLRG
-			addedCost = 2696
-			crashTolerance = 50
+    }
+    SUBTYPE
+    {
+      name = LF
+      title= #LOC_NFConstruction_switcher_subtype_variant_fuel_LF
+      tankType = LF
+      transform = HexLFTankLong
+      transform = LargeTruss
+      transform = COLLIDERLRG
+      addedCost = 2696
+      crashTolerance = 50
       descriptionSummary = #LOC_NFConstruction_switcher_subtype_variant_LF_summary
       descriptionDetail = #LOC_NFConstruction_switcher_subtype_variant_LF_detail
 
-		}
-		SUBTYPE
-		{
-			name = Ox
-			title= #LOC_NFConstruction_switcher_subtype_variant_fuel_O
-			tankType = OX
-			transform = HexOXTankLong
-			transform = LargeTruss
-			transform = COLLIDERLRG
-			crashTolerance = 50
+    }
+    SUBTYPE
+    {
+      name = Ox
+      title= #LOC_NFConstruction_switcher_subtype_variant_fuel_O
+      tankType = OX
+      transform = HexOXTankLong
+      transform = LargeTruss
+      transform = COLLIDERLRG
+      crashTolerance = 50
       descriptionSummary = #LOC_NFConstruction_switcher_subtype_variant_O_summary
       descriptionDetail = #LOC_NFConstruction_switcher_subtype_variant_O_detail
-		}
-		SUBTYPE
-		{
-			name = Support
-			title= #LOC_NFConstruction_switcher_subtype_variant_fuel_Service
-			tankType = MPEC
-			transform = HexMPTankLrg
-			transform = LargeTruss
-			transform = COLLIDERLRG
-			crashTolerance = 50
+    }
+    SUBTYPE
+    {
+      name = Support
+      title= #LOC_NFConstruction_switcher_subtype_variant_fuel_Service
+      tankType = MPEC
+      transform = HexMPTankLrg
+      transform = LargeTruss
+      transform = COLLIDERLRG
+      crashTolerance = 50
       descriptionSummary = #LOC_NFConstruction_switcher_subtype_variant_Service_summary
       descriptionDetail = #LOC_NFConstruction_switcher_subtype_variant_Service_detail
-		}
-		SUBTYPE
-		{
-			name = Xenon
-			title= #LOC_NFConstruction_switcher_subtype_variant_fuel_Xe
-			tankType = Xenon
-			transform = HexXeTankLrg
-			transform = LargeTruss
-			transform = COLLIDERLRG
-			crashTolerance = 50
+      primaryColor = #ffffff
+      secondaryColor = #D9B358
+    }
+    SUBTYPE
+    {
+      name = Xenon
+      title= #LOC_NFConstruction_switcher_subtype_variant_fuel_Xe
+      tankType = Xenon
+      transform = HexXeTankLrg
+      transform = LargeTruss
+      transform = COLLIDERLRG
+      crashTolerance = 50
       descriptionSummary = #LOC_NFConstruction_switcher_subtype_variant_Xe_summary
       descriptionDetail = #LOC_NFConstruction_switcher_subtype_variant_Xe_detail
-		}
-		SUBTYPE
-		{
-			name = Ore
-			title= #LOC_NFConstruction_switcher_subtype_variant_fuel_Ore
-			tankType = Ore
-			transform = HexOreTankLong
-			transform = LargeTruss
-			transform = COLLIDERLRG
-			crashTolerance = 50
+    }
+    SUBTYPE
+    {
+      name = Ore
+      title= #LOC_NFConstruction_switcher_subtype_variant_fuel_Ore
+      tankType = Ore
+      transform = HexOreTankLong
+      transform = LargeTruss
+      transform = COLLIDERLRG
+      crashTolerance = 50
       descriptionSummary = #LOC_NFConstruction_switcher_subtype_variant_Ore_summary
       descriptionDetail = #LOC_NFConstruction_switcher_subtype_variant_Ore_detail
-		}
-	}
+    }
+  }
 }
