--- a/GameData/NearFutureConstruction/Parts/Truss/truss-hex/truss-hex-03.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-hex/truss-hex-03.cfg
@@ -2,89 +2,93 @@
 // 1.25m Truss - Small
 PART
 {
-	name = truss-hex-03
-	module = Part
-	author = Chris Adderley (Nertea)
+  name = truss-hex-03
+  module = Part
+  author = Chris Adderley (Nertea)
 
-	MODEL
-	{
-		model = NearFutureConstruction/Parts/Truss/truss-hex/truss-hex-03
-		position = 0.0, 0.0, 0.0
-		scale = 1,1,1
-		rotation = 0, 0, 0
-	}
-	rescaleFactor = 1
+  MODEL
+  {
+    model = NearFutureConstruction/Parts/Truss/truss-hex/truss-hex-03
+    position = 0.0, 0.0, 0.0
+    scale = 1,1,1
+    rotation = 0, 0, 0
+  }
+  rescaleFactor = 1
 
-	node_stack_top01 = 0.0, 0.5022436, 0.0, 0.0, 1.0, 0.0, 1
-	node_stack_top02 = 0.0, 0.3728409, 0.0, 0.0, -1.0, 0.0, 1
-	node_stack_bottom02 = 0.0,-0.3702007, 0.0, 0.0, 1.0, 0.0, 1
-	node_stack_bottom01 = 0.0, -0.4992971, 0.0, 0.0, -1.0, 0.0, 1
-	node_attach = -0.8413761,0.0, 0.0, -1.0, 0.0, 0.0, 1
+  node_stack_top01 = 0.0, 0.5022436, 0.0, 0.0, 1.0, 0.0, 1
+  node_stack_top02 = 0.0, 0.3728409, 0.0, 0.0, -1.0, 0.0, 1
+  node_stack_bottom02 = 0.0,-0.3702007, 0.0, 0.0, 1.0, 0.0, 1
+  node_stack_bottom01 = 0.0, -0.4992971, 0.0, 0.0, -1.0, 0.0, 1
+  node_attach = -0.8413761,0.0, 0.0, -1.0, 0.0, 0.0, 1
 
 
-	TechRequired = advMetalworks
-	entryCost = 1600
-	cost = 200
-	category = Structural
-	subcategory = 0
-	title = #LOC_NFConstruction_truss-hex-03_title
-	manufacturer = #LOC_NFConstruction_manufacturer_gigabloks_title
-	description = #LOC_NFConstruction_truss-hex-03_description
-	attachRules = 1,1,1,1,0
+  TechRequired = advMetalworks
+  entryCost = 1600
+  cost = 200
+  category = Structural
+  subcategory = 0
+  title = #LOC_NFConstruction_truss-hex-03_title
+  manufacturer = #LOC_NFConstruction_manufacturer_gigabloks_title
+  description = #LOC_NFConstruction_truss-hex-03_description
+  attachRules = 1,1,1,1,0
 
-	bulkheadProfiles = hextruss, srf
+  bulkheadProfiles = hextruss, srf
 
-	// --- standard part parameters ---
-	mass = 0.05
-	dragModelType = default
-	maximum_drag = 0.2
-	minimum_drag = 0.2
-	angularDrag = 1
-	crashTolerance = 80
-	breakingForce = 200
-	breakingTorque = 200
-	maxTemp = 2000
-	thermalMassModifier = 0.4 // I am hollow
+  // --- standard part parameters ---
+  mass = 0.05
+  dragModelType = default
+  maximum_drag = 0.2
+  minimum_drag = 0.2
+  angularDrag = 1
+  crashTolerance = 80
+  breakingForce = 200
+  breakingTorque = 200
+  maxTemp = 2000
+  thermalMassModifier = 0.4 // I am hollow
 
-	tags = #LOC_NFConstruction_truss-hex-03_tags
+  tags = #LOC_NFConstruction_truss-hex-03_tags
 
-	MODULE
-	{
-		name = ModuleB9PartSwitch
-		moduleID = meshSwitch
-		switcherDescription = #LOC_NFConstruction_switcher_subtype_title
+  MODULE
+  {
+    name = ModuleB9PartSwitch
+    moduleID = meshSwitch
+    switcherDescription = #LOC_NFConstruction_switcher_subtype_title
 
-		SUBTYPE
-		{
-			name = Solid
-			title = #LOC_NFConstruction_switcher_subtype_variant1
-			transform = SmallTruss
-			transform = COLLIDERSML
+    SUBTYPE
+    {
+      name = Solid
+      title = #LOC_NFConstruction_switcher_subtype_variant1
+      transform = SmallTruss
+      transform = COLLIDERSML
       descriptionSummary = #LOC_NFConstruction_switcher_truss_solid_summary
       descriptionDetail = #LOC_NFConstruction_switcher_truss_solid_detail
-		}
+      primaryColor = #ffffff
+      secondaryColor = #000000
+    }
 
-		SUBTYPE
-		{
-			name = Hollow
-			title = #LOC_NFConstruction_switcher_subtype_variant2
-			transform = SmallTrussHollow
-			transform = COLLIDEREND
-			transform = COLLIDEREND001
-			transform = COLLIDERSIDE007
-			transform = COLLIDERSIDE008
-			transform = COLLIDERSIDE009
-			node = top02
-			node = bottom02
-			crashTolerance = 60
-			addedMass = -0.01
-			addedCost = -50
+    SUBTYPE
+    {
+      name = Hollow
+      title = #LOC_NFConstruction_switcher_subtype_variant2
+      transform = SmallTrussHollow
+      transform = COLLIDEREND
+      transform = COLLIDEREND001
+      transform = COLLIDERSIDE007
+      transform = COLLIDERSIDE008
+      transform = COLLIDERSIDE009
+      node = top02
+      node = bottom02
+      crashTolerance = 60
+      addedMass = -0.01
+      addedCost = -50
       descriptionSummary = #LOC_NFConstruction_switcher_truss_hollow_summary
       descriptionDetail = #LOC_NFConstruction_switcher_truss_hollow_detail
-		}
+      primaryColor = #000000
+      secondaryColor = #000000
+    }
 
 
-	}
+  }
 
   MODULE
   {
