--- a/GameData/NearFutureConstruction/Parts/Truss/truss-micro/truss-micro-1.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-micro/truss-micro-1.cfg
@@ -2,88 +2,94 @@
 // 0.625m Truss - Long
 PART
 {
-	name = truss-micro-01
-	module = Part
-	author = Chris Adderley (Nertea)
+  name = truss-micro-01
+  module = Part
+  author = Chris Adderley (Nertea)
 
-	MODEL
-	{
-		model = NearFutureConstruction/Parts/Truss/truss-micro/truss-micro-1
-		position = 0.0, 0.0, 0.0
-		scale = 1,1,1
-		rotation = 0, 0, 0
-	}
-	rescaleFactor = 1
+  MODEL
+  {
+    model = NearFutureConstruction/Parts/Truss/truss-micro/truss-micro-1
+    position = 0.0, 0.0, 0.0
+    scale = 1,1,1
+    rotation = 0, 0, 0
+  }
+  rescaleFactor = 1
 
-	node_stack_top01 = 0.0, 0.5277, 0.0, 0.0, 1.0, 0.0, 0
-	node_stack_bottom01 = 0.0, -0.5274, 0.0, 0.0, -1.0, 0.0, 0
-	node_attach = 0, -0.5281, 0.0, 0, -1.0, 0.0, 0
+  node_stack_top01 = 0.0, 0.5277, 0.0, 0.0, 1.0, 0.0, 0
+  node_stack_bottom01 = 0.0, -0.5274, 0.0, 0.0, -1.0, 0.0, 0
+  node_attach = 0, -0.5281, 0.0, 0, -1.0, 0.0, 0
 
 
-	TechRequired = advMetalworks
-	entryCost = 10600
-	cost = 64
-	category = Structural
-	subcategory = 0
-	title = #LOC_NFConstruction_truss-micro-01_title
-	manufacturer = #autoLOC_501647 //#autoLOC_501647 = StrutCo
-	description = #LOC_NFConstruction_truss-micro-01_description
-	attachRules = 1,1,1,1,0
+  TechRequired = advMetalworks
+  entryCost = 10600
+  cost = 64
+  category = Structural
+  subcategory = 0
+  title = #LOC_NFConstruction_truss-micro-01_title
+  manufacturer = #autoLOC_501647 //#autoLOC_501647 = StrutCo
+  description = #LOC_NFConstruction_truss-micro-01_description
+  attachRules = 1,1,1,1,0
 
-	bulkheadProfiles = size0, srf
+  bulkheadProfiles = size0, srf
 
-	// --- standard part parameters ---
-	mass = 0.004
-	dragModelType = default
-	maximum_drag = 0.2
-	minimum_drag = 0.2
-	angularDrag = 1
-	crashTolerance = 12
-	breakingForce = 200
-	breakingTorque = 200
-	maxTemp = 2000
-	thermalMassModifier = 0.4 // I am hollow
+  // --- standard part parameters ---
+  mass = 0.004
+  dragModelType = default
+  maximum_drag = 0.2
+  minimum_drag = 0.2
+  angularDrag = 1
+  crashTolerance = 12
+  breakingForce = 200
+  breakingTorque = 200
+  maxTemp = 2000
+  thermalMassModifier = 0.4 // I am hollow
 
-	tags = #LOC_NFConstruction_truss-micro-01_tags
+  tags = #LOC_NFConstruction_truss-micro-01_tags
 
-	MODULE
-	{
-		name = ModuleB9PartSwitch
-		moduleID = meshSwitch
-		switcherDescription = #LOC_NFConstruction_switcher_profile_title
+  MODULE
+  {
+    name = ModuleB9PartSwitch
+    moduleID = meshSwitch
+    switcherDescription = #LOC_NFConstruction_switcher_profile_title
 
-		SUBTYPE
-		{
-			name = Cubic
-			title = #LOC_NFConstruction_switcher_profile_square
-			transform = TrussSquareLong
+    SUBTYPE
+    {
+      name = Cubic
+      title = #LOC_NFConstruction_switcher_profile_square
+      transform = TrussSquareLong
       descriptionSummary = #LOC_NFConstruction_switcher_profile_square_summary
       descriptionDetail = #LOC_NFConstruction_switcher_profile_square_detail
-		}
+      primaryColor = #ffffff
+      secondaryColor = #ffffff
+    }
 
-		SUBTYPE
-		{
-			name = Triangular
-			title = #LOC_NFConstruction_switcher_profile_triangular
-			transform = TrussTriLong
+    SUBTYPE
+    {
+      name = Triangular
+      title = #LOC_NFConstruction_switcher_profile_triangular
+      transform = TrussTriLong
       descriptionSummary = #LOC_NFConstruction_switcher_profile_triangular_summary
       descriptionDetail = #LOC_NFConstruction_switcher_profile_triangular_detail
-			addedMass = -0.001
-			addedCost = -32
-		}
-		SUBTYPE
-		{
-			name = Planar
-			title = #LOC_NFConstruction_switcher_profile_planar
-			transform = TrussPlaneLong
+      addedMass = -0.001
+      addedCost = -32
+      primaryColor = #969696
+      secondaryColor = #969696
+    }
+    SUBTYPE
+    {
+      name = Planar
+      title = #LOC_NFConstruction_switcher_profile_planar
+      transform = TrussPlaneLong
       descriptionSummary = #LOC_NFConstruction_switcher_profile_planar_summary
       descriptionDetail = #LOC_NFConstruction_switcher_profile_planar_detail
-			addedMass = -0.002
-			addedCost = -48
-		}
+      addedMass = -0.002
+      addedCost = -48
+      primaryColor = #333333
+      secondaryColor = #333333
+    }
 
 
-	}
+  }
   MODULE
   {
     name = ModuleCargoPart
