--- a/GameData/NearFutureConstruction/Parts/Truss/truss-micro/truss-micro-adapter-1.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-micro/truss-micro-adapter-1.cfg
@@ -55,6 +55,8 @@ PART
 			transform = AdaptSquare
       descriptionSummary = #LOC_NFConstruction_switcher_profile_square_summary
       descriptionDetail = #LOC_NFConstruction_switcher_profile_square_detail
+      primaryColor = #ffffff
+      secondaryColor = #ffffff
 		}
 
 		SUBTYPE
@@ -66,6 +68,8 @@ PART
 			addedCost = -32
       descriptionSummary = #LOC_NFConstruction_switcher_profile_triangular_summary
       descriptionDetail = #LOC_NFConstruction_switcher_profile_triangular_detail
+      primaryColor = #969696
+      secondaryColor = #969696
 		}
 
 
