--- a/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-02.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-02.cfg
@@ -2,210 +2,220 @@
 // 2.5m Truss - Structural - Half
 PART
 {
-	name = truss-octo-02
-	module = Part
-	author = Chris Adderley (Nertea)
+  name = truss-octo-02
+  module = Part
+  author = Chris Adderley (Nertea)
 
-	MODEL
-	{
-		model = NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-02
-		position = 0.0, 0.0, 0.0
-		scale = 1,1,1
-		rotation = 0, 0, 0
-	}
-	rescaleFactor = 1
+  MODEL
+  {
+    model = NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-02
+    position = 0.0, 0.0, 0.0
+    scale = 1,1,1
+    rotation = 0, 0, 0
+  }
+  rescaleFactor = 1
 
-	node_stack_top01= 0.0, 1.877688, 0.0, 0.0, 1.0, 0.0, 2
-	node_stack_top02= 0.0, 1.610356, 0.0, 0.0, -1.0, 0.0, 2
-	node_stack_bottom01 = 0.0, -1.875814, 0.0, 0.0, -1.0, 0.0, 2
-	node_stack_bottom02 = 0.0, -1.604266, 0.0, 0.0, 1.0, 0.0, 2
-	node_attach = 1.187252,0.0, 0.0, 1.0, 0.0, 0.0, 2
+  node_stack_top01= 0.0, 1.877688, 0.0, 0.0, 1.0, 0.0, 2
+  node_stack_top02= 0.0, 1.610356, 0.0, 0.0, -1.0, 0.0, 2
+  node_stack_bottom01 = 0.0, -1.875814, 0.0, 0.0, -1.0, 0.0, 2
+  node_stack_bottom02 = 0.0, -1.604266, 0.0, 0.0, 1.0, 0.0, 2
+  node_attach = 1.187252,0.0, 0.0, 1.0, 0.0, 0.0, 2
 
 
-	TechRequired = nanolathing
-	entryCost = 2100
-	cost = 400
-	category = Structural
-	subcategory = 0
-	title = #LOC_NFConstruction_truss-octo-2_title
-	manufacturer = #LOC_NFConstruction_manufacturer_gigabloks_title
-	description = #LOC_NFConstruction_truss-octo-2_description
-	attachRules = 1,1,1,1,0
+  TechRequired = nanolathing
+  entryCost = 2100
+  cost = 400
+  category = Structural
+  subcategory = 0
+  title = #LOC_NFConstruction_truss-octo-2_title
+  manufacturer = #LOC_NFConstruction_manufacturer_gigabloks_title
+  description = #LOC_NFConstruction_truss-octo-2_description
+  attachRules = 1,1,1,1,0
 
-	bulkheadProfiles = octotruss, srf
+  bulkheadProfiles = octotruss, srf
 
-	// --- standard part parameters ---
-	mass = 0.225
-	dragModelType = default
-	maximum_drag = 0.2
-	minimum_drag = 0.2
-	angularDrag = 1
-	crashTolerance = 80
-	breakingForce = 200
-	breakingTorque = 200
-	maxTemp = 2000
-	thermalMassModifier = 0.4 // I am hollow
+  // --- standard part parameters ---
+  mass = 0.225
+  dragModelType = default
+  maximum_drag = 0.2
+  minimum_drag = 0.2
+  angularDrag = 1
+  crashTolerance = 80
+  breakingForce = 200
+  breakingTorque = 200
+  maxTemp = 2000
+  thermalMassModifier = 0.4 // I am hollow
 
-	tags = #LOC_NFConstruction_truss-octo-2_tags
+  tags = #LOC_NFConstruction_truss-octo-2_tags
 
-	MODULE
-	{
-		name = ModuleB9DisableTransform
-		transform = LH2TankMed
-		transform = LH2OXTankMed
-		transform = LH2OXTankMedFoil
-		transform = LithiumTankMed
-		transform = ArgonTankMed
-	}
+  MODULE
+  {
+    name = ModuleB9DisableTransform
+    transform = LH2TankMed
+    transform = LH2OXTankMed
+    transform = LH2OXTankMedFoil
+    transform = LithiumTankMed
+    transform = ArgonTankMed
+  }
 
-	MODULE
-	{
-		name = ModuleB9PartSwitch
-		moduleID = meshSwitch
-		switcherDescription = #LOC_NFConstruction_switcher_subtype_title
-		baseVolume = 3000
-		SUBTYPE
-		{
-			name =  Solid
-			title= #LOC_NFConstruction_switcher_subtype_variant1
-			transform = OctoMedium
-			transform = COLLISION14
+  MODULE
+  {
+    name = ModuleB9PartSwitch
+    moduleID = meshSwitch
+    switcherDescription = #LOC_NFConstruction_switcher_subtype_title
+    baseVolume = 3000
+    SUBTYPE
+    {
+      name =  Solid
+      title= #LOC_NFConstruction_switcher_subtype_variant1
+      transform = OctoMedium
+      transform = COLLISION14
       descriptionSummary = #LOC_NFConstruction_switcher_truss_solid_summary
       descriptionDetail = #LOC_NFConstruction_switcher_truss_solid_detail
-		}
+      primaryColor = #ffffff
+      secondaryColor = #ffffff
+    }
 
-		SUBTYPE
-		{
-			name =  Hollow
-			title= #LOC_NFConstruction_switcher_subtype_variant2
-			transform = OctoMedHollow
-			transform = OctoMedHollowStruct
-			transform = COLLISION05
-			transform = COLLISION06
-			transform = COLLISION07
-			transform = COLLISION08
-			transform = COLLISION18
-			transform = COLLISION19
-			node = top02
-			node = bottom02
-			crashTolerance = 60
-			addedMass = -0.025
-			addedCost = -40
+    SUBTYPE
+    {
+      name =  Hollow
+      title= #LOC_NFConstruction_switcher_subtype_variant2
+      transform = OctoMedHollow
+      transform = OctoMedHollowStruct
+      transform = COLLISION05
+      transform = COLLISION06
+      transform = COLLISION07
+      transform = COLLISION08
+      transform = COLLISION18
+      transform = COLLISION19
+      node = top02
+      node = bottom02
+      crashTolerance = 60
+      addedMass = -0.025
+      addedCost = -40
       descriptionSummary = #LOC_NFConstruction_switcher_truss_hollow_summary
       descriptionDetail = #LOC_NFConstruction_switcher_truss_hollow_detail
-		}
-		SUBTYPE
-		{
-			name = Saddle
-			title= #LOC_NFConstruction_switcher_subtype_variant3
-			transform = OctoMedHollowSaddle
-			transform = OctoMedHollowStructSaddle
-			transform = COLLISION05
-			transform = COLLISION06
-			transform = COLLISION08
-			transform = COLLISION18
-			transform = COLLISION19
-			node = top02
-			node = bottom02
-			crashTolerance = 50
-			addedMass = -0.035
-			addedCost = -60
+      primaryColor = #000000
+      secondaryColor = #000000
+    }
+    SUBTYPE
+    {
+      name = Saddle
+      title= #LOC_NFConstruction_switcher_subtype_variant3
+      transform = OctoMedHollowSaddle
+      transform = OctoMedHollowStructSaddle
+      transform = COLLISION05
+      transform = COLLISION06
+      transform = COLLISION08
+      transform = COLLISION18
+      transform = COLLISION19
+      node = top02
+      node = bottom02
+      crashTolerance = 50
+      addedMass = -0.035
+      addedCost = -60
       descriptionSummary = #LOC_NFConstruction_switcher_truss_saddle_summary
       descriptionDetail = #LOC_NFConstruction_switcher_truss_saddle_detail
-		}
-		SUBTYPE
-		{
-			name = Dual
-			title= #LOC_NFConstruction_switcher_subtype_variant4
-			transform = OctoMedHollowHalf
-			transform = OctoMedHollowStructHalf
-			transform = COLLISION05
-			transform = COLLISION08
-			transform = COLLISION18
-			transform = COLLISION19
-			node = top02
-			node = bottom02
-			crashTolerance = 40
-			addedMass = -0.045
-			addedCost = -80
+      primaryColor = #ffffff
+      secondaryColor = #000000
+    }
+    SUBTYPE
+    {
+      name = Dual
+      title= #LOC_NFConstruction_switcher_subtype_variant4
+      transform = OctoMedHollowHalf
+      transform = OctoMedHollowStructHalf
+      transform = COLLISION05
+      transform = COLLISION08
+      transform = COLLISION18
+      transform = COLLISION19
+      node = top02
+      node = bottom02
+      crashTolerance = 40
+      addedMass = -0.045
+      addedCost = -80
       descriptionSummary = #LOC_NFConstruction_switcher_truss_dual_summary
       descriptionDetail = #LOC_NFConstruction_switcher_truss_dual_detail
-		}
-		SUBTYPE
-		{
-			name = LFO
-			title= #LOC_NFConstruction_switcher_subtype_variant_fuel_LFO
-			tankType = LFOX
-			transform = OctoMedBare
-			transform = COLLISION14
-			transform = LFOTankMed
-			addedCost = 1348
-			crashTolerance = 50
+      primaryColor = #808080
+      secondaryColor = #000000
+    }
+    SUBTYPE
+    {
+      name = LFO
+      title= #LOC_NFConstruction_switcher_subtype_variant_fuel_LFO
+      tankType = LFOX
+      transform = OctoMedBare
+      transform = COLLISION14
+      transform = LFOTankMed
+      addedCost = 1348
+      crashTolerance = 50
       descriptionSummary = #LOC_NFConstruction_switcher_subtype_variant_LFO_summary
       descriptionDetail = #LOC_NFConstruction_switcher_subtype_variant_LFO_detail
-		}
-		SUBTYPE
-		{
-			name = LF
-			title= #LOC_NFConstruction_switcher_subtype_variant_fuel_LF
-			tankType = LF
-			transform = OctoMedBare
-			transform = COLLISION14
-			transform = LFTankMed
-			addedCost = 1348
-			crashTolerance = 50
+    }
+    SUBTYPE
+    {
+      name = LF
+      title= #LOC_NFConstruction_switcher_subtype_variant_fuel_LF
+      tankType = LF
+      transform = OctoMedBare
+      transform = COLLISION14
+      transform = LFTankMed
+      addedCost = 1348
+      crashTolerance = 50
       descriptionSummary = #LOC_NFConstruction_switcher_subtype_variant_LF_summary
       descriptionDetail = #LOC_NFConstruction_switcher_subtype_variant_LF_detail
-		}
-		SUBTYPE
-		{
-			name = Ox
-			title= #LOC_NFConstruction_switcher_subtype_variant_fuel_O
-			tankType = OX
-			transform = OctoMedBare
-			transform = COLLISION14
-			transform = OXTankMed
-			addedCost = 1348
-			crashTolerance = 50
+    }
+    SUBTYPE
+    {
+      name = Ox
+      title= #LOC_NFConstruction_switcher_subtype_variant_fuel_O
+      tankType = OX
+      transform = OctoMedBare
+      transform = COLLISION14
+      transform = OXTankMed
+      addedCost = 1348
+      crashTolerance = 50
       descriptionSummary = #LOC_NFConstruction_switcher_subtype_variant_O_summary
       descriptionDetail = #LOC_NFConstruction_switcher_subtype_variant_O_detail
-		}
-		SUBTYPE
-		{
-			name = Support
-			title= #LOC_NFConstruction_switcher_subtype_variant_fuel_Service
-			tankType = MPEC
-			transform = OctoMedBare
-			transform = COLLISION14
-			transform = MPTankMed
-			crashTolerance = 50
+    }
+    SUBTYPE
+    {
+      name = Support
+      title= #LOC_NFConstruction_switcher_subtype_variant_fuel_Service
+      tankType = MPEC
+      transform = OctoMedBare
+      transform = COLLISION14
+      transform = MPTankMed
+      crashTolerance = 50
       descriptionSummary = #LOC_NFConstruction_switcher_subtype_variant_Service_summary
       descriptionDetail = #LOC_NFConstruction_switcher_subtype_variant_Service_detail
+      primaryColor = #ffffff
+      secondaryColor = #D9B358
 
-		}
-		SUBTYPE
-		{
-			name = Xenon
-			title= #LOC_NFConstruction_switcher_subtype_variant_fuel_Xe
-			tankType = Xenon
-			transform = OctoMedBare
-			transform = COLLISION14
-			transform = XeTankMed
-			crashTolerance = 50
+    }
+    SUBTYPE
+    {
+      name = Xenon
+      title= #LOC_NFConstruction_switcher_subtype_variant_fuel_Xe
+      tankType = Xenon
+      transform = OctoMedBare
+      transform = COLLISION14
+      transform = XeTankMed
+      crashTolerance = 50
       descriptionSummary = #LOC_NFConstruction_switcher_subtype_variant_Xe_summary
       descriptionDetail = #LOC_NFConstruction_switcher_subtype_variant_Xe_detail
-		}
-		SUBTYPE
-		{
-			name = Ore
-			title= #LOC_NFConstruction_switcher_subtype_variant_fuel_Ore
-			tankType = Ore
-			transform = OctoMedBare
-			transform = COLLISION14
-			transform = OreTankMed
-			crashTolerance = 50
+    }
+    SUBTYPE
+    {
+      name = Ore
+      title= #LOC_NFConstruction_switcher_subtype_variant_fuel_Ore
+      tankType = Ore
+      transform = OctoMedBare
+      transform = COLLISION14
+      transform = OreTankMed
+      crashTolerance = 50
       descriptionSummary = #LOC_NFConstruction_switcher_subtype_variant_Ore_summary
       descriptionDetail = #LOC_NFConstruction_switcher_subtype_variant_Ore_detail
-		}
-	}
+    }
+  }
 }
