--- a/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-attach-01.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-attach-01.cfg
@@ -2,95 +2,103 @@
 // 2.5m Truss Attach
 PART
 {
-	name = truss-octo-attach-01
-	module = Part
-	author = Chris Adderley (Nertea)
+  name = truss-octo-attach-01
+  module = Part
+  author = Chris Adderley (Nertea)
 
-	MODEL
-	{
-		model = NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-attach-01
-		position = 0.0, 0.0, 0.0
-		scale = 1,1,1
-		rotation = 0, 0, 0
-	}
-	rescaleFactor = 1
+  MODEL
+  {
+    model = NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-attach-01
+    position = 0.0, 0.0, 0.0
+    scale = 1,1,1
+    rotation = 0, 0, 0
+  }
+  rescaleFactor = 1
 
-	node_stack_top = 0.0, 0.3593886, 0.0, 0.0, 1.0, 0.0, 2
-	node_attach = 0.0, -0.04074037, 0.0, 0.0, -1.0, 0.0, 2
+  node_stack_top = 0.0, 0.3593886, 0.0, 0.0, 1.0, 0.0, 2
+  node_attach = 0.0, -0.04074037, 0.0, 0.0, -1.0, 0.0, 2
 
-	bulkheadProfiles = octotruss, srf
+  bulkheadProfiles = octotruss, srf
 
-	TechRequired = nanolathing
-	entryCost = 7600
-	cost = 875
-	category = Structural
-	subcategory = 0
-	title = #LOC_NFConstruction_truss-octo-attach-1_title
-	manufacturer = #LOC_NFConstruction_manufacturer_gigabloks_title
-	description = #LOC_NFConstruction_truss-octo-attach-1_description
-	attachRules = 1,1,1,1,0
+  TechRequired = nanolathing
+  entryCost = 7600
+  cost = 875
+  category = Structural
+  subcategory = 0
+  title = #LOC_NFConstruction_truss-octo-attach-1_title
+  manufacturer = #LOC_NFConstruction_manufacturer_gigabloks_title
+  description = #LOC_NFConstruction_truss-octo-attach-1_description
+  attachRules = 1,1,1,1,0
 
-	// --- standard part parameters ---
-	mass = 0.10
-	dragModelType = default
-	maximum_drag = 0.2
-	minimum_drag = 0.2
-	angularDrag = 1
-	crashTolerance = 80
-	breakingForce = 200
-	breakingTorque = 200
-	maxTemp = 2000
-	thermalMassModifier = 0.4 // I am hollow
+  // --- standard part parameters ---
+  mass = 0.10
+  dragModelType = default
+  maximum_drag = 0.2
+  minimum_drag = 0.2
+  angularDrag = 1
+  crashTolerance = 80
+  breakingForce = 200
+  breakingTorque = 200
+  maxTemp = 2000
+  thermalMassModifier = 0.4 // I am hollow
 
-	tags = #LOC_NFConstruction_truss-octo-attach-1_tags
-	MODULE
-	{
-		name = ModuleB9PartSwitch
-		moduleID = meshSwitch
-		switcherDescription = #LOC_NFConstruction_switcher_attach_title
+  tags = #LOC_NFConstruction_truss-octo-attach-1_tags
+  MODULE
+  {
+    name = ModuleB9PartSwitch
+    moduleID = meshSwitch
+    switcherDescription = #LOC_NFConstruction_switcher_attach_title
 
-		SUBTYPE
-		{
-			name = Angled
-			title= #LOC_NFConstruction_switcher_attach_variant1
-			transform = OctoAttach
-			transform = COLLISION
-			descriptionSummary = #LOC_NFConstruction_switcher_attach_angled_summary
+    SUBTYPE
+    {
+      name = Angled
+      title= #LOC_NFConstruction_switcher_attach_variant1
+      transform = OctoAttach
+      transform = COLLISION
+      descriptionSummary = #LOC_NFConstruction_switcher_attach_angled_summary
       descriptionDetail = #LOC_NFConstruction_switcher_attach_angled_detail
+      primaryColor = #ffffff
+      secondaryColor = #ffffff
 
-		}
+    }
 
-		SUBTYPE
-		{
-			name = Angled Hollow
-			title= #LOC_NFConstruction_switcher_attach_variant2
-			transform = OctoAttachHollow
-			transform = COLLISION
-			addedCost = -75
-			addedMass = -0.01
-			descriptionSummary = #LOC_NFConstruction_switcher_attach_angled_hollow_summary
+    SUBTYPE
+    {
+      name = Angled Hollow
+      title= #LOC_NFConstruction_switcher_attach_variant2
+      transform = OctoAttachHollow
+      transform = COLLISION
+      addedCost = -75
+      addedMass = -0.01
+      descriptionSummary = #LOC_NFConstruction_switcher_attach_angled_hollow_summary
       descriptionDetail = #LOC_NFConstruction_switcher_attach_angled_hollow_detail
-		}
-		SUBTYPE
-		{
-			name = Ortho
-			title= #LOC_NFConstruction_switcher_attach_variant3
-			transform = OctoAttachAlt
-			transform = COLLISIONALT
-			descriptionSummary = #LOC_NFConstruction_switcher_attach_ortho_summary
+      primaryColor = #ffffff
+      secondaryColor = #000000
+    }
+    SUBTYPE
+    {
+      name = Ortho
+      title= #LOC_NFConstruction_switcher_attach_variant3
+      transform = OctoAttachAlt
+      transform = COLLISIONALT
+      descriptionSummary = #LOC_NFConstruction_switcher_attach_ortho_summary
       descriptionDetail = #LOC_NFConstruction_switcher_attach_ortho_detail
-		}
+      primaryColor = #808080
+      secondaryColor = #808080
+    }
 
-		SUBTYPE
-		{
-			name = Ortho Hollow
-			title= #LOC_NFConstruction_switcher_attach_variant4
-			transform = OctoAttachAltHollow
-			transform = COLLISIONALT
-			addedCost = -75
-			addedMass = -0.01
-			descriptionSummary = #LOC_NFConstruction_switcher_attach_ortho_hollow_summary
+    SUBTYPE
+    {
+      name = Ortho Hollow
+      title= #LOC_NFConstruction_switcher_attach_variant4
+      transform = OctoAttachAltHollow
+      transform = COLLISIONALT
+      addedCost = -75
+      addedMass = -0.01
+      descriptionSummary = #LOC_NFConstruction_switcher_attach_ortho_hollow_summary
       descriptionDetail = #LOC_NFConstruction_switcher_attach_ortho_hollow_detail
-		}
-	}
+      primaryColor = #808080
+      secondaryColor = #000000
+    }
+  }
 }
