--- a/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-crew-02.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-crew-02.cfg
@@ -2,136 +2,138 @@
 // 2.5m Truss - Pressurized Half
 PART
 {
-	name = truss-octo-crew-02
-	module = Part
-	author = Chris Adderley (Nertea)
+  name = truss-octo-crew-02
+  module = Part
+  author = Chris Adderley (Nertea)
 
-	MODEL
-	{
-		model = NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-crew-02
-		position = 0.0, 0.0, 0.0
-		scale = 1,1,1
-		rotation = 0, 0, 0
-	}
-	rescaleFactor = 1
+  MODEL
+  {
+    model = NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-crew-02
+    position = 0.0, 0.0, 0.0
+    scale = 1,1,1
+    rotation = 0, 0, 0
+  }
+  rescaleFactor = 1
 
-	node_stack_top01= 0.0, 1.877688, 0.0, 0.0, 1.0, 0.0, 2
-	node_stack_bottom01 = 0.0, -1.875814, 0.0, 0.0, -1.0, 0.0, 2
-	node_attach = 1.187252,0.0, 0.0, 1.0, 0.0, 0.0, 2
+  node_stack_top01= 0.0, 1.877688, 0.0, 0.0, 1.0, 0.0, 2
+  node_stack_bottom01 = 0.0, -1.875814, 0.0, 0.0, -1.0, 0.0, 2
+  node_attach = 1.187252,0.0, 0.0, 1.0, 0.0, 0.0, 2
 
 
-	TechRequired = nanolathing
-	entryCost = 2900
-	cost = 1150
-	category = Structural
-	subcategory = 0
-	title = #LOC_NFConstruction_truss-octo-crew-2_title
-	manufacturer = #LOC_NFConstruction_manufacturer_gigabloks_title
-	description = #LOC_NFConstruction_truss-octo-crew-2_description
-	attachRules = 1,1,1,1,0
+  TechRequired = nanolathing
+  entryCost = 2900
+  cost = 1150
+  category = Structural
+  subcategory = 0
+  title = #LOC_NFConstruction_truss-octo-crew-2_title
+  manufacturer = #LOC_NFConstruction_manufacturer_gigabloks_title
+  description = #LOC_NFConstruction_truss-octo-crew-2_description
+  attachRules = 1,1,1,1,0
 
-	bulkheadProfiles = octotruss, srf
+  bulkheadProfiles = octotruss, srf
 
-	// --- standard part parameters ---
-	mass = 0.425
-	dragModelType = default
-	maximum_drag = 0.2
-	minimum_drag = 0.2
-	angularDrag = 1
-	crashTolerance = 80
-	breakingForce = 200
-	breakingTorque = 200
-	maxTemp = 1000
-	thermalMassModifier = 0.7 // I am hollow
+  // --- standard part parameters ---
+  mass = 0.425
+  dragModelType = default
+  maximum_drag = 0.2
+  minimum_drag = 0.2
+  angularDrag = 1
+  crashTolerance = 80
+  breakingForce = 200
+  breakingTorque = 200
+  maxTemp = 1000
+  thermalMassModifier = 0.7 // I am hollow
 
-	tags = #LOC_NFConstruction_truss-octo-crew-2_tags
-	MODULE
-	{
-		name = ModuleColorChanger
-		shaderProperty = _EmissiveColor
-		animRate = 0.8
-		animState = false
-		useRate = true
-		toggleInEditor = true
-		toggleInFlight = true
-		toggleInFlight = true
-		unfocusedRange = 5
-		toggleName = #autoLOC_502011 //#autoLOC_502011 = Toggle Lights
-		eventOnName = #autoLOC_502012 //#autoLOC_502012 = Lights On
-		eventOffName = #autoLOC_502013 //#autoLOC_502013 = Lights Off
-		toggleAction = True
-		defaultActionGroup = Light
-		redCurve
-		{
-			key = 0 0 0 3
-			key = 1 1 0 0
-		}
-		greenCurve
-		{
-			key = 0 0 0 1
-			key = 1 1 1 0
-		}
-		blueCurve
-		{
-			key = 0 0 0 0
-			key = 1 0.7 1.5 0
-		}
-		alphaCurve
-		{
-			key = 0 1
-		}
-	}
-	MODULE
-	{
-		name = ModuleB9PartSwitch
-		moduleID = meshSwitch
-		switcherDescription = #LOC_NFConstruction_switcher_subtype_title
+  tags = #LOC_NFConstruction_truss-octo-crew-2_tags
+  MODULE
+  {
+    name = ModuleColorChanger
+    shaderProperty = _EmissiveColor
+    animRate = 0.8
+    animState = false
+    useRate = true
+    toggleInEditor = true
+    toggleInFlight = true
+    toggleInFlight = true
+    unfocusedRange = 5
+    toggleName = #autoLOC_502011 //#autoLOC_502011 = Toggle Lights
+    eventOnName = #autoLOC_502012 //#autoLOC_502012 = Lights On
+    eventOffName = #autoLOC_502013 //#autoLOC_502013 = Lights Off
+    toggleAction = True
+    defaultActionGroup = Light
+    redCurve
+    {
+      key = 0 0 0 3
+      key = 1 1 0 0
+    }
+    greenCurve
+    {
+      key = 0 0 0 1
+      key = 1 1 1 0
+    }
+    blueCurve
+    {
+      key = 0 0 0 0
+      key = 1 0.7 1.5 0
+    }
+    alphaCurve
+    {
+      key = 0 1
+    }
+  }
+  MODULE
+  {
+    name = ModuleB9PartSwitch
+    moduleID = meshSwitch
+    switcherDescription = #LOC_NFConstruction_switcher_subtype_title
 
-		SUBTYPE
-		{
-			name = Solid
-			title= #LOC_NFConstruction_switcher_subtype_variant1
-			transform = OctoMedium001
-			transform = COLLISION032
+    SUBTYPE
+    {
+      name = Solid
+      title= #LOC_NFConstruction_switcher_subtype_variant1
+      transform = OctoMedium001
+      transform = COLLISION032
       descriptionSummary = #LOC_NFConstruction_switcher_truss_solid_summary
       descriptionDetail = #LOC_NFConstruction_switcher_truss_solid_detail
-		}
+      primaryColor = #ffffff
+      secondaryColor = #ffffff
+    }
 
-		SUBTYPE
-		{
-			name = Hollow
-			title= #LOC_NFConstruction_switcher_subtype_variant2
-			transform = OctoMedHollowCrew
-			transform = OctoMedHollowStructCrew
-			transform = COLLIDERTUBEMED
-			transform = COLLISIONEND1
-			transform = COLLISIONEND2
-			transform = COLLISION05
-			transform = COLLISION06
-			transform = COLLISION07
-			transform = COLLISION08
-			addedMass = -0.025
-			addedCost = -40
-			crashTolerance = 60
+    SUBTYPE
+    {
+      name = Hollow
+      title= #LOC_NFConstruction_switcher_subtype_variant2
+      transform = OctoMedHollowCrew
+      transform = OctoMedHollowStructCrew
+      transform = COLLIDERTUBEMED
+      transform = COLLISIONEND1
+      transform = COLLISIONEND2
+      transform = COLLISION05
+      transform = COLLISION06
+      transform = COLLISION07
+      transform = COLLISION08
+      addedMass = -0.025
+      addedCost = -40
+      crashTolerance = 60
       descriptionSummary = #LOC_NFConstruction_switcher_truss_hollow_summary
       descriptionDetail = #LOC_NFConstruction_switcher_truss_hollow_detail
-		}
-		SUBTYPE
-		{
-			name = Dual
-			title= #LOC_NFConstruction_switcher_subtype_variant4
-			transform = OctoMedHollowHalfCrew
-			transform = OctoMedHollowStructHalfCrew
-			transform = COLLIDERTUBEMED
-			transform = COLLISIONEND1
-			transform = COLLISIONEND2
-			transform = COLLISION05
-			transform = COLLISION08
-			addedMass = -0.045
-			addedCost = -80
-			crashTolerance = 50
+    }
+    SUBTYPE
+    {
+      name = Dual
+      title= #LOC_NFConstruction_switcher_subtype_variant4
+      transform = OctoMedHollowHalfCrew
+      transform = OctoMedHollowStructHalfCrew
+      transform = COLLIDERTUBEMED
+      transform = COLLISIONEND1
+      transform = COLLISIONEND2
+      transform = COLLISION05
+      transform = COLLISION08
+      addedMass = -0.045
+      addedCost = -80
+      crashTolerance = 50
       descriptionSummary = #LOC_NFConstruction_switcher_truss_dual_summary
       descriptionDetail = #LOC_NFConstruction_switcher_truss_dual_detail
-		}
-	}
+    }
+  }
 }
