--- a/GameData/NearFutureConstruction/Parts/Truss/truss-spinal/truss-spinal-01.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-spinal/truss-spinal-01.cfg
@@ -2,212 +2,235 @@
 // 3.75m Truss - Spinal
 PART
 {
-	name = truss-spinal-01
-	module = Part
-	author = Chris Adderley (Nertea)
+  name = truss-spinal-01
+  module = Part
+  author = Chris Adderley (Nertea)
 
-	MODEL
-	{
-		model = NearFutureConstruction/Parts/Truss/truss-spinal/truss-spinal-01
-		position = 0.0, 0.0, 0.0
-		scale = 1,1,1
-		rotation = 0, 0, 0
-	}
-	rescaleFactor = 1
+  MODEL
+  {
+    model = NearFutureConstruction/Parts/Truss/truss-spinal/truss-spinal-01
+    position = 0.0, 0.0, 0.0
+    scale = 1,1,1
+    rotation = 0, 0, 0
+  }
+  rescaleFactor = 1
 
-	node_stack_top01 = 0.0, 3.7473, 0.0, 0.0, 1.0, 0.0, 3
-	node_stack_top02 = 0.0, 3.659, 0.0, 0.0, -1.0, 0.0, 2
-	node_stack_bottom01 = 0.0, -3.7309, 0.0, 0.0, -1.0, 0.0,3
-	node_stack_bottom02 = 0.0, -3.659, 0.0, 0.0, 1.0, 0.0,2
-	node_attach = -1.332,0.0, 0.0, 1.0, 0.0, 0.0, 3
+  node_stack_top01 = 0.0, 3.7473, 0.0, 0.0, 1.0, 0.0, 3
+  node_stack_top02 = 0.0, 3.659, 0.0, 0.0, -1.0, 0.0, 2
+  node_stack_bottom01 = 0.0, -3.7309, 0.0, 0.0, -1.0, 0.0,3
+  node_stack_bottom02 = 0.0, -3.659, 0.0, 0.0, 1.0, 0.0,2
+  node_attach = -1.332,0.0, 0.0, 1.0, 0.0, 0.0, 3
 
 
-	TechRequired = nanolathing
-	entryCost = 3600
-	cost = 1000
-	category = Structural
-	subcategory = 0
-	title = #LOC_NFConstruction_truss-spinal-01_title
-	manufacturer = #LOC_NFConstruction_manufacturer_gigabloks_title
-	description = #LOC_NFConstruction_truss-spinal-01_description
-	attachRules = 1,1,1,1,0
+  TechRequired = nanolathing
+  entryCost = 3600
+  cost = 1000
+  category = Structural
+  subcategory = 0
+  title = #LOC_NFConstruction_truss-spinal-01_title
+  manufacturer = #LOC_NFConstruction_manufacturer_gigabloks_title
+  description = #LOC_NFConstruction_truss-spinal-01_description
+  attachRules = 1,1,1,1,0
 
-	bulkheadProfiles = spinaltruss, srf
+  bulkheadProfiles = spinaltruss, srf
 
-	// --- standard part parameters ---
-	mass = 0.75
-	dragModelType = default
-	maximum_drag = 0.2
-	minimum_drag = 0.2
-	angularDrag = 1
-	crashTolerance = 80
-	breakingForce = 200
-	breakingTorque = 200
-	maxTemp = 2000
-	thermalMassModifier = 0.4 // I am hollow
+  // --- standard part parameters ---
+  mass = 0.75
+  dragModelType = default
+  maximum_drag = 0.2
+  minimum_drag = 0.2
+  angularDrag = 1
+  crashTolerance = 80
+  breakingForce = 200
+  breakingTorque = 200
+  maxTemp = 2000
+  thermalMassModifier = 0.4 // I am hollow
 
-	tags = #LOC_NFConstruction_truss-spinal-01_tags
+  tags = #LOC_NFConstruction_truss-spinal-01_tags
 
-	MODULE
-	{
-		name = ModuleB9PartSwitch
-		moduleID = meshSwitch
-		switcherDescription = #LOC_NFConstruction_switcher_core_title
-		SUBTYPE
-		{
-			name = None
-			title = #LOC_NFConstruction_switcher_core_variant1
+  MODULE
+  {
+    name = ModuleB9PartSwitch
+    moduleID = meshSwitch
+    switcherDescription = #LOC_NFConstruction_switcher_core_title
+    SUBTYPE
+    {
+      name = None
+      title = #LOC_NFConstruction_switcher_core_variant1
       descriptionSummary = #LOC_NFConstruction_switcher_core_none_summary
       descriptionDetail = #LOC_NFConstruction_switcher_core_none_detail
-		}
-		SUBTYPE
-		{
-			name = Solid
-			title = #LOC_NFConstruction_switcher_core_variant2
-			transform = CORELRG
-			transform = COLLIDERLRGCORE
-			addedMass = 0.2
-			addedCost = 200
+      primaryColor = #000000
+      secondaryColor = #000000
+    }
+    SUBTYPE
+    {
+      name = Solid
+      title = #LOC_NFConstruction_switcher_core_variant2
+      transform = CORELRG
+      transform = COLLIDERLRGCORE
+      addedMass = 0.2
+      addedCost = 200
       descriptionSummary = #LOC_NFConstruction_switcher_core_solid_summary
       descriptionDetail = #LOC_NFConstruction_switcher_core_solid_detail
-		}
-	}
-	MODULE
-	{
-		name = ModuleB9PartSwitch
-		moduleID = meshSwitch2
-		switcherDescription = #LOC_NFConstruction_switcher_truss_title
-		SUBTYPE
-		{
-			name = Solid
-			title = #LOC_NFConstruction_switcher_truss_variant1
-			transform = TRUSSLRG
-			transform = COLLIDERLRG01
-			transform = COLLIDERLRG02
-			transform = COLLIDERLRG03
-			transform = COLLIDERLRG04
+      primaryColor = #ffffff
+      secondaryColor = #ffffff
+    }
+  }
+  MODULE
+  {
+    name = ModuleB9PartSwitch
+    moduleID = meshSwitch2
+    switcherDescription = #LOC_NFConstruction_switcher_truss_title
+    SUBTYPE
+    {
+      name = Solid
+      title = #LOC_NFConstruction_switcher_truss_variant1
+      transform = TRUSSLRG
+      transform = COLLIDERLRG01
+      transform = COLLIDERLRG02
+      transform = COLLIDERLRG03
+      transform = COLLIDERLRG04
       descriptionSummary = #LOC_NFConstruction_switcher_truss_solid_summary
       descriptionDetail = #LOC_NFConstruction_switcher_truss_solid_detail
-		}
-		SUBTYPE
-		{
-			name = Saddle
-			title = #LOC_NFConstruction_switcher_truss_variant3
-			transform = TRUSSLRGSADDLE
-			transform = COLLIDERLRG01
-			transform = COLLIDERLRG02
-			transform = COLLIDERLRG03
+      primaryColor = #ffffff
+      secondaryColor = #ffffff
+    }
+    SUBTYPE
+    {
+      name = Saddle
+      title = #LOC_NFConstruction_switcher_truss_variant3
+      transform = TRUSSLRGSADDLE
+      transform = COLLIDERLRG01
+      transform = COLLIDERLRG02
+      transform = COLLIDERLRG03
+      primaryColor = #ffffff
+      secondaryColor = #000000
 
-			addedMass = -0.0875
-			addedCost = -112.5
+      addedMass = -0.0875
+      addedCost = -112.5
       descriptionSummary = #LOC_NFConstruction_switcher_truss_saddle_summary
       descriptionDetail = #LOC_NFConstruction_switcher_truss_saddle_detail
-		}
-		SUBTYPE
-		{
-			name = Dual
-			title = #LOC_NFConstruction_switcher_truss_variant4
-			transform = TRUSSLRGDUAL
-			transform = COLLIDERLRG01
-			transform = COLLIDERLRG02
-			addedMass = -0.175
-			addedCost = -225
+    }
+    SUBTYPE
+    {
+      name = Dual
+      title = #LOC_NFConstruction_switcher_truss_variant4
+      transform = TRUSSLRGDUAL
+      transform = COLLIDERLRG01
+      transform = COLLIDERLRG02
+      addedMass = -0.175
+      addedCost = -225
       descriptionSummary = #LOC_NFConstruction_switcher_truss_dual_summary
       descriptionDetail = #LOC_NFConstruction_switcher_truss_dual_detail
-		}
-		SUBTYPE
-		{
-			name = Frame
-			title = #LOC_NFConstruction_switcher_truss_variant5
-			transform = TRUSSLRGFRAME
-			addedMass = -0.35
-			addedCost = -450
+      primaryColor = #808080
+      secondaryColor = #000000
+    }
+    SUBTYPE
+    {
+      name = Frame
+      title = #LOC_NFConstruction_switcher_truss_variant5
+      transform = TRUSSLRGFRAME
+      addedMass = -0.35
+      addedCost = -450
       descriptionSummary = #LOC_NFConstruction_switcher_truss_frame_summary
       descriptionDetail = #LOC_NFConstruction_switcher_truss_frame_detail
-		}
-	}
-	MODULE
-	{
-		name = ModuleB9PartSwitch
-		moduleID = meshSwitch3
-		switcherDescription = #LOC_NFConstruction_switcher_endcap_title1
+      primaryColor = #000000
+      secondaryColor = #000000
+    }
+  }
+  MODULE
+  {
+    name = ModuleB9PartSwitch
+    moduleID = meshSwitch3
+    switcherDescription = #LOC_NFConstruction_switcher_endcap_title1
 
-		SUBTYPE
-		{
-			name = Basic
-title = #LOC_NFConstruction_switcher_endcap_variant1
-
-			transform = TRUSSTOP
-			transform = COLLIDERTOPA01
-			transform = COLLIDERTOPA02
-			transform = COLLIDERTOPA03
-			transform = COLLIDERTOPA04
+    SUBTYPE
+    {
+      name = Basic
+      title = #LOC_NFConstruction_switcher_endcap_variant1
+      transform = TRUSSTOP
+      transform = COLLIDERTOPA01
+      transform = COLLIDERTOPA02
+      transform = COLLIDERTOPA03
+      transform = COLLIDERTOPA04
       descriptionSummary = #LOC_NFConstruction_switcher_endcap_basic_summary
       descriptionDetail = #LOC_NFConstruction_switcher_endcap_basic_detail
-		}
-		SUBTYPE
-		{
-			name = Solid
-			title = #LOC_NFConstruction_switcher_endcap_variant2
-			node = top02
-			transform = TRUSSTOPSOLID
-			transform = COLLIDERTOPB
-			addedMass = 0.03
-			addedCost = 75
+      primaryColor = #ffffff
+      secondaryColor = #000000
+    }
+    SUBTYPE
+    {
+      name = Solid
+      title = #LOC_NFConstruction_switcher_endcap_variant2
+      node = top02
+      transform = TRUSSTOPSOLID
+      transform = COLLIDERTOPB
+      addedMass = 0.03
+      addedCost = 75
       descriptionSummary = #LOC_NFConstruction_switcher_endcap_solid_summary
       descriptionDetail = #LOC_NFConstruction_switcher_endcap_solid_detail
-		}
-		SUBTYPE
-		{
-			name = None
-			title = #LOC_NFConstruction_switcher_endcap_variant3
-			transform = TRUSSTOPFRAME
-			addedMass = -0.01
-			addedCost = -25
+      primaryColor = #ffffff
+      secondaryColor = #ffffff
+    }
+    SUBTYPE
+    {
+      name = None
+      title = #LOC_NFConstruction_switcher_endcap_variant3
+      transform = TRUSSTOPFRAME
+      addedMass = -0.01
+      addedCost = -25
       descriptionSummary = #LOC_NFConstruction_switcher_endcap_none_summary
       descriptionDetail = #LOC_NFConstruction_switcher_endcap_none_detail
-		}
-	}
-	MODULE
-	{
-		name = ModuleB9PartSwitch
-		moduleID = meshSwitch4
-		switcherDescription = #LOC_NFConstruction_switcher_endcap_title2
+      primaryColor = #000000
+      secondaryColor = #000000
+    }
+  }
+  MODULE
+  {
+    name = ModuleB9PartSwitch
+    moduleID = meshSwitch4
+    switcherDescription = #LOC_NFConstruction_switcher_endcap_title2
 
-		SUBTYPE
-		{
-			name = Basic
-			title = #LOC_NFConstruction_switcher_endcap_variant1
+    SUBTYPE
+    {
+      name = Basic
+      title = #LOC_NFConstruction_switcher_endcap_variant1
 
-			transform = TRUSSBOT
-			transform = COLLIDERBOTA01
-			transform = COLLIDERBOTA02
-			transform = COLLIDERBOTA03
-			transform = COLLIDERBOTA04
+      transform = TRUSSBOT
+      transform = COLLIDERBOTA01
+      transform = COLLIDERBOTA02
+      transform = COLLIDERBOTA03
+      transform = COLLIDERBOTA04
       descriptionSummary = #LOC_NFConstruction_switcher_endcap_basic_summary
       descriptionDetail = #LOC_NFConstruction_switcher_endcap_basic_detail
-		}
-		SUBTYPE
-		{
-			name = Soild
-			title = #LOC_NFConstruction_switcher_endcap_variant2
-			node = bottom02
-			transform = TRUSSBOTSOLID
-			transform = COLLIDERBOTB
-			addedMass = 0.03
-			addedCost = 75
+      primaryColor = #ffffff
+      secondaryColor = #000000
+    }
+    SUBTYPE
+    {
+      name = Soild
+      title = #LOC_NFConstruction_switcher_endcap_variant2
+      node = bottom02
+      transform = TRUSSBOTSOLID
+      transform = COLLIDERBOTB
+      addedMass = 0.03
+      addedCost = 75
       descriptionSummary = #LOC_NFConstruction_switcher_endcap_solid_summary
       descriptionDetail = #LOC_NFConstruction_switcher_endcap_solid_detail
-		}
-		SUBTYPE
-		{
-			name = None
-			title = #LOC_NFConstruction_switcher_endcap_variant3
-			transform = TRUSSBOTFRAME
-			addedMass = -0.01
-			addedCost = -25
+      primaryColor = #ffffff
+      secondaryColor = #ffffff
+    }
+    SUBTYPE
+    {
+      name = None
+      title = #LOC_NFConstruction_switcher_endcap_variant3
+      transform = TRUSSBOTFRAME
+      addedMass = -0.01
+      addedCost = -25
       descriptionSummary = #LOC_NFConstruction_switcher_endcap_none_summary
       descriptionDetail = #LOC_NFConstruction_switcher_endcap_none_detail
-		}
-	}
+      primaryColor = #000000
+      secondaryColor = #000000
+    }
+  }
 }
