--- a/GameData/NearFutureConstruction/Parts/Truss/truss-spinal/truss-spinal-03.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-spinal/truss-spinal-03.cfg
@@ -2,212 +2,236 @@
 // 3.75m Truss - Spinal Short
 PART
 {
-	name = truss-spinal-03
-	module = Part
-	author = Chris Adderley (Nertea)
+  name = truss-spinal-03
+  module = Part
+  author = Chris Adderley (Nertea)
 
-	MODEL
-	{
-		model = NearFutureConstruction/Parts/Truss/truss-spinal/truss-spinal-03
-		position = 0.0, 0.0, 0.0
-		scale = 1,1,1
-		rotation = 0, 0, 0
-	}
-	rescaleFactor = 1
+  MODEL
+  {
+    model = NearFutureConstruction/Parts/Truss/truss-spinal/truss-spinal-03
+    position = 0.0, 0.0, 0.0
+    scale = 1,1,1
+    rotation = 0, 0, 0
+  }
+  rescaleFactor = 1
 
-	node_stack_top01 = 0.0, 0.9284, 0.0, 0.0, 1.0, 0.0, 3
-	node_stack_top02 = 0.0, 0.844, 0.0, 0.0, -1.0, 0.0, 2
-	node_stack_bottom01 = 0.0, -0.9274, 0.0, 0.0, -1.0, 0.0,3
-	node_stack_bottom02 = 0.0, -0.847, 0.0, 0.0, 1.0, 0.0,2
-	node_attach = -1.332,0.0, 0.0, 1.0, 0.0, 0.0, 3
+  node_stack_top01 = 0.0, 0.9284, 0.0, 0.0, 1.0, 0.0, 3
+  node_stack_top02 = 0.0, 0.844, 0.0, 0.0, -1.0, 0.0, 2
+  node_stack_bottom01 = 0.0, -0.9274, 0.0, 0.0, -1.0, 0.0,3
+  node_stack_bottom02 = 0.0, -0.847, 0.0, 0.0, 1.0, 0.0,2
+  node_attach = -1.332,0.0, 0.0, 1.0, 0.0, 0.0, 3
 
 
-	TechRequired = nanolathing
-	entryCost = 900
-	cost = 250
-	category = Structural
-	subcategory = 0
-	title = #LOC_NFConstruction_truss-spinal-03_title
-	manufacturer = #LOC_NFConstruction_manufacturer_gigabloks_title
-	description = #LOC_NFConstruction_truss-spinal-03_description
-	attachRules = 1,1,1,1,0
+  TechRequired = nanolathing
+  entryCost = 900
+  cost = 250
+  category = Structural
+  subcategory = 0
+  title = #LOC_NFConstruction_truss-spinal-03_title
+  manufacturer = #LOC_NFConstruction_manufacturer_gigabloks_title
+  description = #LOC_NFConstruction_truss-spinal-03_description
+  attachRules = 1,1,1,1,0
 
-	bulkheadProfiles = spinaltruss, srf
+  bulkheadProfiles = spinaltruss, srf
 
-	// --- standard part parameters ---
-	mass = 0.1875
-	dragModelType = default
-	maximum_drag = 0.2
-	minimum_drag = 0.2
-	angularDrag = 1
-	crashTolerance = 80
-	breakingForce = 200
-	breakingTorque = 200
-	maxTemp = 2000
-	thermalMassModifier = 0.4 // I am hollow
+  // --- standard part parameters ---
+  mass = 0.1875
+  dragModelType = default
+  maximum_drag = 0.2
+  minimum_drag = 0.2
+  angularDrag = 1
+  crashTolerance = 80
+  breakingForce = 200
+  breakingTorque = 200
+  maxTemp = 2000
+  thermalMassModifier = 0.4 // I am hollow
 
-	tags = #LOC_NFConstruction_truss-spinal-03_tags
+  tags = #LOC_NFConstruction_truss-spinal-03_tags
 
-	MODULE
-	{
-		name = ModuleB9PartSwitch
-		moduleID = meshSwitch
-		switcherDescription = #LOC_NFConstruction_switcher_core_title
-		SUBTYPE
-		{
-			name = None
-			title = #LOC_NFConstruction_switcher_core_variant1
+  MODULE
+  {
+    name = ModuleB9PartSwitch
+    moduleID = meshSwitch
+    switcherDescription = #LOC_NFConstruction_switcher_core_title
+    SUBTYPE
+    {
+      name = None
+      title = #LOC_NFConstruction_switcher_core_variant1
       descriptionSummary = #LOC_NFConstruction_switcher_core_none_summary
       descriptionDetail = #LOC_NFConstruction_switcher_core_none_detail
-		}
-		SUBTYPE
-		{
-			name = Solid
-  		title = #LOC_NFConstruction_switcher_core_variant2
-			transform = CORESML
-			transform = COLLIDERSMLCORE
-			addedMass = 0.05
-			addedCost = 50
+      primaryColor = #000000
+      secondaryColor = #000000
+    }
+    SUBTYPE
+    {
+      name = Solid
+      title = #LOC_NFConstruction_switcher_core_variant2
+      transform = CORESML
+      transform = COLLIDERSMLCORE
+      addedMass = 0.05
+      addedCost = 50
       descriptionSummary = #LOC_NFConstruction_switcher_core_solid_summary
       descriptionDetail = #LOC_NFConstruction_switcher_core_solid_detail
-		}
-	}
-	MODULE
-	{
-		name = ModuleB9PartSwitch
-		moduleID = meshSwitch2
-		switcherDescription = #LOC_NFConstruction_switcher_truss_title
-		SUBTYPE
-		{
-			name = Solid
-			title = #LOC_NFConstruction_switcher_truss_variant1
-			transform = TRUSSSML
-			transform = COLLIDERSML01
-			transform = COLLIDERSML02
-			transform = COLLIDERSML03
-			transform = COLLIDERSML04
+      primaryColor = #ffffff
+      secondaryColor = #ffffff
+    }
+  }
+  MODULE
+  {
+    name = ModuleB9PartSwitch
+    moduleID = meshSwitch2
+    switcherDescription = #LOC_NFConstruction_switcher_truss_title
+    SUBTYPE
+    {
+      name = Solid
+      title = #LOC_NFConstruction_switcher_truss_variant1
+      transform = TRUSSSML
+      transform = COLLIDERSML01
+      transform = COLLIDERSML02
+      transform = COLLIDERSML03
+      transform = COLLIDERSML04
       descriptionSummary = #LOC_NFConstruction_switcher_truss_solid_summary
       descriptionDetail = #LOC_NFConstruction_switcher_truss_solid_detail
-		}
-		SUBTYPE
-		{
-			name = Saddle
-  		title = #LOC_NFConstruction_switcher_truss_variant3
-			transform = TRUSSSMLSADDLE
-			transform = COLLIDERSML04
-			transform = COLLIDERSML02
-			transform = COLLIDERSML03
+      primaryColor = #ffffff
+      secondaryColor = #ffffff
+    }
+    SUBTYPE
+    {
+      name = Saddle
+      title = #LOC_NFConstruction_switcher_truss_variant3
+      transform = TRUSSSMLSADDLE
+      transform = COLLIDERSML04
+      transform = COLLIDERSML02
+      transform = COLLIDERSML03
 
-			addedMass = -0.021875
-			addedCost = -28.125
+      addedMass = -0.021875
+      addedCost = -28.125
       descriptionSummary = #LOC_NFConstruction_switcher_truss_saddle_summary
       descriptionDetail = #LOC_NFConstruction_switcher_truss_saddle_detail
-		}
-		SUBTYPE
-		{
-			name = Dual
-			title = #LOC_NFConstruction_switcher_truss_variant4
-			transform = TRUSSSMLDUAL
-			transform = COLLIDERSML03
-			transform = COLLIDERSML04
+      primaryColor = #ffffff
+      secondaryColor = #000000
+    }
+    SUBTYPE
+    {
+      name = Dual
+      title = #LOC_NFConstruction_switcher_truss_variant4
+      transform = TRUSSSMLDUAL
+      transform = COLLIDERSML03
+      transform = COLLIDERSML04
 
-			addedMass = -0.04375
-			addedCost = -56.25
+      addedMass = -0.04375
+      addedCost = -56.25
       descriptionSummary = #LOC_NFConstruction_switcher_truss_dual_summary
       descriptionDetail = #LOC_NFConstruction_switcher_truss_dual_detail
-		}
-		SUBTYPE
-		{
-			name = Frame
-  		title = #LOC_NFConstruction_switcher_truss_variant5
-			transform = TRUSSSMLFRAME
-			addedMass = 0.0875
-			addedCost = -112.5
+      primaryColor = #808080
+      secondaryColor = #000000
+    }
+    SUBTYPE
+    {
+      name = Frame
+      title = #LOC_NFConstruction_switcher_truss_variant5
+      transform = TRUSSSMLFRAME
+      addedMass = 0.0875
+      addedCost = -112.5
       descriptionSummary = #LOC_NFConstruction_switcher_truss_frame_summary
       descriptionDetail = #LOC_NFConstruction_switcher_truss_frame_detail
-		}
-	}
-	MODULE
-	{
-		name = ModuleB9PartSwitch
-		moduleID = meshSwitch3
-		switcherDescription = #LOC_NFConstruction_switcher_endcap_title1
+      primaryColor = #000000
+      secondaryColor = #000000
+    }
+  }
+  MODULE
+  {
+    name = ModuleB9PartSwitch
+    moduleID = meshSwitch3
+    switcherDescription = #LOC_NFConstruction_switcher_endcap_title1
 
-		SUBTYPE
-		{
-			name = Basic
-  		title = #LOC_NFConstruction_switcher_endcap_variant1
+    SUBTYPE
+    {
+      name = Basic
+      title = #LOC_NFConstruction_switcher_endcap_variant1
 
-			transform = TRUSSTOP
-			transform = COLLIDERTOPA01
-			transform = COLLIDERTOPA02
-			transform = COLLIDERTOPA03
-			transform = COLLIDERTOPA04
+      transform = TRUSSTOP
+      transform = COLLIDERTOPA01
+      transform = COLLIDERTOPA02
+      transform = COLLIDERTOPA03
+      transform = COLLIDERTOPA04
       descriptionSummary = #LOC_NFConstruction_switcher_endcap_basic_summary
       descriptionDetail = #LOC_NFConstruction_switcher_endcap_basic_detail
-		}
-		SUBTYPE
-		{
-			name = Solid
-  		title = #LOC_NFConstruction_switcher_endcap_variant2
-			node = top02
-			transform = TRUSSTOPSOLID
-			transform = COLLIDERTOPB
-			addedMass = 0.03
-			addedCost = 75
+      primaryColor = #ffffff
+      secondaryColor = #000000
+    }
+    SUBTYPE
+    {
+      name = Solid
+      title = #LOC_NFConstruction_switcher_endcap_variant2
+      node = top02
+      transform = TRUSSTOPSOLID
+      transform = COLLIDERTOPB
+      addedMass = 0.03
+      addedCost = 75
       descriptionSummary = #LOC_NFConstruction_switcher_endcap_solid_summary
       descriptionDetail = #LOC_NFConstruction_switcher_endcap_solid_detail
-		}
-		SUBTYPE
-		{
-			name = None
-  		title = #LOC_NFConstruction_switcher_endcap_variant3
-			transform = TRUSSTOPFRAME
-			addedMass = -0.01
-			addedCost = -25
+      primaryColor = #ffffff
+      secondaryColor = #ffffff
+    }
+    SUBTYPE
+    {
+      name = None
+      title = #LOC_NFConstruction_switcher_endcap_variant3
+      transform = TRUSSTOPFRAME
+      addedMass = -0.01
+      addedCost = -25
       descriptionSummary = #LOC_NFConstruction_switcher_endcap_none_summary
       descriptionDetail = #LOC_NFConstruction_switcher_endcap_none_detail
-		}
-	}
-	MODULE
-	{
-		name = ModuleB9PartSwitch
-		moduleID = meshSwitch4
-		switcherDescription = #LOC_NFConstruction_switcher_endcap_title2
+      primaryColor = #000000
+      secondaryColor = #000000
+    }
+  }
+  MODULE
+  {
+    name = ModuleB9PartSwitch
+    moduleID = meshSwitch4
+    switcherDescription = #LOC_NFConstruction_switcher_endcap_title2
 
-		SUBTYPE
-		{
-			name = Basic
-  		title = #LOC_NFConstruction_switcher_endcap_variant1
-			transform = TRUSSBOT
-			transform = COLLIDERBOTA01
-			transform = COLLIDERBOTA02
-			transform = COLLIDERBOTA03
-			transform = COLLIDERBOTA04
+    SUBTYPE
+    {
+      name = Basic
+      title = #LOC_NFConstruction_switcher_endcap_variant1
+      transform = TRUSSBOT
+      transform = COLLIDERBOTA01
+      transform = COLLIDERBOTA02
+      transform = COLLIDERBOTA03
+      transform = COLLIDERBOTA04
       descriptionSummary = #LOC_NFConstruction_switcher_endcap_basic_summary
       descriptionDetail = #LOC_NFConstruction_switcher_endcap_basic_detail
-		}
-		SUBTYPE
-		{
-			name = Solid
-  		title = #LOC_NFConstruction_switcher_endcap_variant2
-			node = bottom02
-			transform = TRUSSBOTSOLID
-			transform = COLLIDERBOTB
-			addedMass = 0.03
-			addedCost = 75
+      primaryColor = #ffffff
+      secondaryColor = #000000
+    }
+    SUBTYPE
+    {
+      name = Solid
+      title = #LOC_NFConstruction_switcher_endcap_variant2
+      node = bottom02
+      transform = TRUSSBOTSOLID
+      transform = COLLIDERBOTB
+      addedMass = 0.03
+      addedCost = 75
       descriptionSummary = #LOC_NFConstruction_switcher_endcap_solid_summary
       descriptionDetail = #LOC_NFConstruction_switcher_endcap_solid_detail
-		}
-		SUBTYPE
-		{
-			name = None
-			title = #LOC_NFConstruction_switcher_endcap_variant3
-			transform = TRUSSBOTFRAME
-			addedMass = -0.01
-			addedCost = -25
+      primaryColor = #ffffff
+      secondaryColor = #ffffff
+    }
+    SUBTYPE
+    {
+      name = None
+      title = #LOC_NFConstruction_switcher_endcap_variant3
+      transform = TRUSSBOTFRAME
+      addedMass = -0.01
+      addedCost = -25
       descriptionSummary = #LOC_NFConstruction_switcher_endcap_none_summary
       descriptionDetail = #LOC_NFConstruction_switcher_endcap_none_detail
-		}
-	}
+      primaryColor = #000000
+      secondaryColor = #000000
+    }
+  }
 }
