--- a/GameData/NearFutureConstruction/Parts/Truss/truss-spinal/truss-spinal-adapter-02.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-spinal/truss-spinal-adapter-02.cfg
@@ -2,70 +2,74 @@
 // 3.75m Truss - Spinal to 2.5m
 PART
 {
-	name = truss-spinal-adapter-02
-	module = Part
-	author = Chris Adderley (Nertea)
+  name = truss-spinal-adapter-02
+  module = Part
+  author = Chris Adderley (Nertea)
 
-	MODEL
-	{
-		model = NearFutureConstruction/Parts/Truss/truss-spinal/truss-spinal-adapter-02
-		position = 0.0, 0.0, 0.0
-		scale = 1,1,1
-		rotation = 0, 0, 0
-	}
-	rescaleFactor = 1
+  MODEL
+  {
+    model = NearFutureConstruction/Parts/Truss/truss-spinal/truss-spinal-adapter-02
+    position = 0.0, 0.0, 0.0
+    scale = 1,1,1
+    rotation = 0, 0, 0
+  }
+  rescaleFactor = 1
 
-	node_stack_top01 = 0.0, 0.931, 0.0, 0.0, 1.0, 0.0, 3
-	node_stack_bottom01 = 0.0, -0.9267, 0.0, 0.0, -1.0, 0.0, 2
+  node_stack_top01 = 0.0, 0.931, 0.0, 0.0, 1.0, 0.0, 3
+  node_stack_bottom01 = 0.0, -0.9267, 0.0, 0.0, -1.0, 0.0, 2
 
-	TechRequired = nanolathing
-	entryCost = 3500
-	cost = 1700
-	category = Structural
-	subcategory = 0
-	title = #LOC_NFConstruction_truss-spinal-adapter-02_title
-	manufacturer =#LOC_NFConstruction_manufacturer_gigabloks_title
-	description = #LOC_NFConstruction_truss-spinal-adapter-02_description
-	attachRules = 1,0,1,1,0
+  TechRequired = nanolathing
+  entryCost = 3500
+  cost = 1700
+  category = Structural
+  subcategory = 0
+  title = #LOC_NFConstruction_truss-spinal-adapter-02_title
+  manufacturer =#LOC_NFConstruction_manufacturer_gigabloks_title
+  description = #LOC_NFConstruction_truss-spinal-adapter-02_description
+  attachRules = 1,0,1,1,0
 
-	bulkheadProfiles = spinaltruss, srf, size2
+  bulkheadProfiles = spinaltruss, srf, size2
 
-	// --- standard part parameters ---
-	mass = 0.2
-	dragModelType = default
-	maximum_drag = 0.2
-	minimum_drag = 0.2
-	angularDrag = 1
-	crashTolerance = 80
-	breakingForce = 200
-	breakingTorque = 200
-	maxTemp = 2000
-	thermalMassModifier = 0.4 // I am hollow
+  // --- standard part parameters ---
+  mass = 0.2
+  dragModelType = default
+  maximum_drag = 0.2
+  minimum_drag = 0.2
+  angularDrag = 1
+  crashTolerance = 80
+  breakingForce = 200
+  breakingTorque = 200
+  maxTemp = 2000
+  thermalMassModifier = 0.4 // I am hollow
 
-	tags = #LOC_NFConstruction_truss-spinal-adapter-02_tags
-	MODULE
-	{
-		name = ModuleB9PartSwitch
-		moduleID = meshSwitch
-		switcherDescription = #LOC_NFConstruction_switcher_core_title
-		SUBTYPE
-		{
-			name = None
-			title = #LOC_NFConstruction_switcher_core_variant1
+  tags = #LOC_NFConstruction_truss-spinal-adapter-02_tags
+  MODULE
+  {
+    name = ModuleB9PartSwitch
+    moduleID = meshSwitch
+    switcherDescription = #LOC_NFConstruction_switcher_core_title
+    SUBTYPE
+    {
+      name = None
+      title = #LOC_NFConstruction_switcher_core_variant1
       descriptionSummary = #LOC_NFConstruction_switcher_core_none_summary
       descriptionDetail = #LOC_NFConstruction_switcher_core_none_detail
-		}
-		SUBTYPE
-		{
-			name = Solid
-			title = #LOC_NFConstruction_switcher_core_variant2
-			transform = COREADAPT02
-			transform = COLLIDERADAPT02CORE
-			addedMass = 0.05
-			addedCost = 75
+      primaryColor = #000000
+      secondaryColor = #000000
+    }
+    SUBTYPE
+    {
+      name = Solid
+      title = #LOC_NFConstruction_switcher_core_variant2
+      transform = COREADAPT02
+      transform = COLLIDERADAPT02CORE
+      addedMass = 0.05
+      addedCost = 75
       descriptionSummary = #LOC_NFConstruction_switcher_core_solid_summary
       descriptionDetail = #LOC_NFConstruction_switcher_core_solid_detail
-		}
-	}
+      primaryColor = #ffffff
+      secondaryColor = #ffffff
+    }
+  }
 
 }
